--- a/future-dates/2023-12-10-homily.md
+++ b/future-dates/2023-12-10-homily.md
@@ -1,17 +1,17 @@
 ---
 
-title:  대림 제2주일(인권 주일, 사회 교리 주간)
+title: 대림 제2주일(인권 주일, 사회 교리 주간)
 layout: post 
-image:  
-first_reading:  이사야서 40,1-5.9-11
+image: 
+first_reading: 이사야서 40,1-5.9-11
 first_reading_link_cbck: Ls/40
-first_reading_link: m=1&n=133&p=37
+first_reading_link: m=1&n=129&p=40
 second_reading: 베드로 2서 3,8-14 
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+second_reading_link_cbck: 2Pt/3
+second_reading_link: m=2&n=168&p=3
+gospel: 마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
+gospel_link_cbck: Mk/1
+gospel_link: m=2&n=148&p=1
 
 ---
 
