--- a/future-dates/2023-12-25-homily.md
+++ b/future-dates/2023-12-25-homily.md
@@ -1,17 +1,17 @@
 ---
 
-title:  주님 성탄 대축일 - 낮 미사
+title: 주님 성탄 대축일 - 낮 미사
 layout: post 
-image:  
-first_reading: 이사야서 9,1-6  
+image: 
+first_reading: 이사야서 9,1-6 
 first_reading_link_cbck: Ls/9
-first_reading_link: m=1&n=133&p=37
-second_reading: 티토서  2,11-14
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  루카가 전한 거룩한 복음입니다.2,1-14
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+first_reading_link: m=1&n=129&p=9
+second_reading: 티토서 2,11-14
+second_reading_link_cbck: Ti/2
+second_reading_link: m=2&n=163&p=2
+gospel: 루카 2,1-14
+gospel_link_cbck: Lk/2
+gospel_link: m=2&n=149&p=2
 daily_missa: 20231225/15390
 
 ---
