--- a/future-dates/2023-5-18-homily.md
+++ b/future-dates/2023-5-18-homily.md
@@ -1,6 +1,6 @@
 ---
 
-title: 주님 승천 대축일(홍보 주일) 특전미사
+title: 주님 승천 대축일 대축일 (스위스 전례력)
 layout: post 
 image: 
 first_reading: 사도행전 8,5-8.14-17
@@ -15,7 +15,6 @@ gospel_link: m=2&n=150&p=14
 daily_missa: 20230521
 daily_read: https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day=20230521&missaid=13766#missa_02
 daily_listen: https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth=2023-05-21
-
 
 ---
 
