--- a/future-dates/2023-7-9-homily.md
+++ b/future-dates/2023-7-9-homily.md
@@ -1,18 +1,18 @@
 ---
 
-title:  연중 제14주일
+title: 연중 제14주일
 layout: post 
-image:  
+image: 
 bonstetten: true
-first_reading:  즈카르야 예언서 9,9-10
+first_reading: 즈카르야 예언서 9,9-10
 first_reading_link_cbck: Zec/9
-first_reading_link: m=2&n=151&p=8
-second_reading:  로마서 8,9.11-13
-second_reading_link_cbck: 1Pt/
-second_reading_link: m=2&n=167&p=3
-gospel:  마태복음 11,25-30
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=14
+first_reading_link: m=1&n=145&p=9
+second_reading: 로마서 8,9.11-13
+second_reading_link_cbck: Rom/8
+second_reading_link: m=2&n=152&p=8
+gospel: 마태복음 11,25-30
+gospel_link_cbck: Mt/11
+gospel_link: m=2&n=147&p=11
 
 ---
 
