--- a/future-dates/2023-9-3-homily.md
+++ b/future-dates/2023-9-3-homily.md
@@ -1,18 +1,18 @@
 ---
 
-title:  연중 제22주일
+title: 연중 제22주일
 layout: post 
-image:  
+image: 
 bonstetten: true
-first_reading:  예레미야서 20,7-9
+first_reading: 예레미야서 20,7-9
 first_reading_link_cbck: Jer/20
-first_reading_link: m=2&n=151&p=8
-second_reading:  로마서 12,1-2
-second_reading_link_cbck: 1Pt/
-second_reading_link: m=2&n=167&p=3
+first_reading_link: m=1&n=130&p=20
+second_reading: 로마서 12,1-2
+second_reading_link_cbck: Rom/12
+second_reading_link: m=2&n=152&p=12
 gospel: 마태복음 16,21-27
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=14
+gospel_link_cbck: Mt/16
+gospel_link: m=2&n=147&p=16
 
 ---
 
