--- a/_posts/2020/2020-2-23-homily.md
+++ b/_posts/2020/2020-2-23-homily.md
@@ -10,7 +10,7 @@ second_reading: 코린토 1서 3,16-23
 second_reading_link_cbck: 1Cor/3
 second_reading_link: m=2&n=153&p=3
 gospel: 마태 5,38-48
-gospel_link_cbck: 
+gospel_link_cbck: Mt/5
 gospel_link: m=2&n=147&p=5
 
 ---
