--- a/future-dates/2023-10-1-homily.md
+++ b/future-dates/2023-10-1-homily.md
@@ -1,20 +1,19 @@
 ---
 
-title:  연중 제26주일
+title: 연중 제26주일
 layout: post 
-image:  
-first_reading:  에제키엘 예언서 18,25-28
+image: 
+first_reading: 에제키엘 예언서 18,25-28
 
 first_reading_link_cbck: Ez/18
-first_reading_link: m=1&n=133&p=37
-second_reading:  필리피서 2,1-11
+first_reading_link: m=1&n=133&p=18
+second_reading: 필리피서 2,1-11
+second_reading_link_cbck: Phil/2
+second_reading_link: m=2&n=157&p=2
+gospel: 마태복음 21,28-32
 
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  마태복음 21,28-32
-
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+gospel_link_cbck: Mt/21
+gospel_link: m=2&n=147&p=21
 
 ---
 
