--- a/future-dates/2023-10-15-homily.md
+++ b/future-dates/2023-10-15-homily.md
@@ -1,21 +1,20 @@
 ---
 
-title:  연중 제28주일
+title: 연중 제28주일
 layout: post 
-image:  
+image: 
 bonstetten: true
 first_reading: 이사야서 25,6-10ㄱ
 
-first_reading_link_cbck: Acts/
-first_reading_link: m=2&n=151&p=8
+first_reading_link_cbck: Ls/25
+first_reading_link: m=1&n=129&p=25
 second_reading: 필리피서 4,12-14.19-20
-
-second_reading_link_cbck: 1Pt/
-second_reading_link: m=2&n=167&p=3
+second_reading_link_cbck: Phil/4
+second_reading_link: m=2&n=157&p=4
 gospel: 마태복음 22,1-14
 
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=14
+gospel_link_cbck: Mt/22
+gospel_link: m=2&n=147&p=22
 
 ---
 
