--- a/future-dates/2023-10-29-homily.md
+++ b/future-dates/2023-10-29-homily.md
@@ -1,18 +1,18 @@
 ---
 
-title:  연중 제30주일
+title: 연중 제30주일
 layout: post 
-image:  
+image: 
 bonstetten: true
-first_reading:  탈출기 22,20-26
+first_reading: 탈출기 22,20-26
 first_reading_link_cbck: Ex/22
-first_reading_link: m=2&n=151&p=8
-second_reading: 테살로니카 1서  1,5ㄴ-10
-second_reading_link_cbck: 1Pt/
-second_reading_link: m=2&n=167&p=3
-gospel:  마태복음 22,34-40
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=14
+first_reading_link: m=1&n=102&p=22
+second_reading: 테살로니카 1서 1,5ㄴ-10
+second_reading_link_cbck: 1Thes/1
+second_reading_link: m=2&n=159&p=1
+gospel: 마태복음 22,34-40
+gospel_link_cbck: Mt/22
+gospel_link: m=2&n=147&p=22
 
 ---
 
