--- a/future-dates/2023-11-26-homily.md
+++ b/future-dates/2023-11-26-homily.md
@@ -1,17 +1,17 @@
 ---
 
-title:  온 누리의 임금이신 우리 주 예수 그리스도왕 대축일(성서 주간)
+title: 온 누리의 임금이신 우리 주 예수 그리스도왕 대축일(성서 주간)
 layout: post 
-image:  
-first_reading:  에제키엘 예언서 34,11-12.15-17
+image: 
+first_reading: 에제키엘 예언서 34,11-12.15-17
 first_reading_link_cbck: Ez/34
-first_reading_link: m=1&n=133&p=37
+first_reading_link: m=1&n=133&p=34
 second_reading: 코린토 1서 15,20-26.28 
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  마태복음 25,31-46
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+second_reading_link_cbck: 1Cor/15
+second_reading_link: m=2&n=153&p=15
+gospel: 마태복음 25,31-46
+gospel_link_cbck: Mt/25
+gospel_link: m=2&n=147&p=25
 
 ---
 
