--- a/future-dates/2023-11-5-homily.md
+++ b/future-dates/2023-11-5-homily.md
@@ -1,17 +1,17 @@
 ---
 
-title:  연중 제31주일
+title: 연중 제31주일
 layout: post 
-image:  
-first_reading:   말라키 예언서 1,14ㄴ-2,2ㄴ.8-10
+image: 
+first_reading:  말라키 예언서 1,14ㄴ-2,2ㄴ.8-10
 first_reading_link_cbck: Mal/1
-first_reading_link: m=1&n=133&p=37
-second_reading: 테살로니카 1서  2,7ㄴ-9.13 
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  마태복음 23,1-12
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+first_reading_link: m=1&n=146&p=1
+second_reading: 테살로니카 1서 2,7ㄴ-9.13 
+second_reading_link_cbck: 1Thes/2
+second_reading_link: m=2&n=159&p=2
+gospel: 마태복음 23,1-12
+gospel_link_cbck: Mt/23
+gospel_link: m=2&n=147&p=23
 
 ---
 
