--- a/future-dates/2023-7-23-homily.md
+++ b/future-dates/2023-7-23-homily.md
@@ -1,18 +1,18 @@
 ---
 
-title:  연중 제16주일(조부모와 노인의 날) (스위스 독서 확인)
+title: 연중 제16주일(조부모와 노인의 날) (스위스 독서 확인)
 layout: post 
-image:  
+image: 
 bonstetten: true
-first_reading:  지혜서 12,13.16-19
+first_reading: 지혜서 12,13.16-19
 first_reading_link_cbck: Wis/12
-first_reading_link: m=2&n=151&p=8
-second_reading:  로마서 8,26-27
-second_reading_link_cbck: 1Pt/
-second_reading_link: m=2&n=167&p=3
-gospel:  마태복음 13,24-43
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=14
+first_reading_link: m=1&n=127&p=12
+second_reading: 로마서 8,26-27
+second_reading_link_cbck: Rom/8
+second_reading_link: m=2&n=152&p=8
+gospel: 마태복음 13,24-43
+gospel_link_cbck: Mt/13
+gospel_link: m=2&n=147&p=13
 
 ---
 
