--- a/future-dates/2023-7-30-homily.md
+++ b/future-dates/2023-7-30-homily.md
@@ -2,16 +2,16 @@
 
 title: 연중 제17주일
 layout: post 
-image:  
-first_reading:  열왕기 상권 3,5-6ㄱ.7-12
+image: 
+first_reading: 열왕기 상권 3,5-6ㄱ.7-12
 first_reading_link_cbck: 1Kgs/3
-first_reading_link: m=1&n=133&p=37
-second_reading:  로마서 8,28-30
-second_reading_link_cbck: Rom/
+first_reading_link: 
+second_reading: 로마서 8,28-30
+second_reading_link_cbck: Rom/8
 second_reading_link: m=2&n=152&p=8
-gospel:  마태복음 13,44-52
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+gospel: 마태복음 13,44-52
+gospel_link_cbck: Mt/13
+gospel_link: m=2&n=147&p=13
 
 ---
 
