--- a/future-dates/2023-8-20-homily.md
+++ b/future-dates/2023-8-20-homily.md
@@ -1,17 +1,17 @@
 ---
 
-title:  연중 제20주일
+title: 연중 제20주일
 layout: post 
-image:  
-first_reading:  이사야서 56,1.6-7
+image: 
+first_reading: 이사야서 56,1.6-7
 first_reading_link_cbck: Ls/56
-first_reading_link: m=1&n=133&p=37
-second_reading:  로마서 11,13-15.29-32
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  마태복음 15,21-28
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+first_reading_link: m=1&n=129&p=56
+second_reading: 로마서 11,13-15.29-32
+second_reading_link_cbck: Rom/11
+second_reading_link: m=2&n=152&p=11
+gospel: 마태복음 15,21-28
+gospel_link_cbck: Mt/15
+gospel_link: m=2&n=147&p=15
 
 ---
 
