--- a/future-dates/2023-8-27-homily.md
+++ b/future-dates/2023-8-27-homily.md
@@ -1,18 +1,18 @@
 ---
 
-title:  연중 제16주일(조부모와 노인의 날) (스위스 독서 확인)
+title: 연중 제16주일(조부모와 노인의 날) (스위스 독서 확인)
 layout: post 
-image:  
+image: 
 bonstetten: true
-first_reading:  이사야서 22,19-2312,13.16-19
-first_reading_link_cbck: Acts/
-first_reading_link: m=2&n=151&p=8
-second_reading:  로마서 11,33-36
-second_reading_link_cbck: 1Pt/
-second_reading_link: m=2&n=167&p=3
-gospel:  마태복음 16,13-20
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=14
+first_reading: 이사야서 22,19-2312,13.16-19
+first_reading_link_cbck: Ls/22
+first_reading_link: m=1&n=129&p=22
+second_reading: 로마서 11,33-36
+second_reading_link_cbck: Rom/11
+second_reading_link: m=2&n=152&p=11
+gospel: 마태복음 16,13-20
+gospel_link_cbck: Mt/16
+gospel_link: m=2&n=147&p=16
 
 ---
 
