--- a/future-dates/2023-9-10-homily.md
+++ b/future-dates/2023-9-10-homily.md
@@ -1,17 +1,17 @@
 ---
 
-title:  연중 제23주일
+title: 연중 제23주일
 layout: post 
-image:  
-first_reading:  에제키엘 예언서 33,7-9
+image: 
+first_reading: 에제키엘 예언서 33,7-9
 first_reading_link_cbck: Ez/33
-first_reading_link: m=1&n=133&p=37
-second_reading:  로마서 13,8-10
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  마태복음 18,15-20
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+first_reading_link: m=1&n=133&p=33
+second_reading: 로마서 13,8-10
+second_reading_link_cbck: Rom/13
+second_reading_link: m=2&n=152&p=13
+gospel: 마태복음 18,15-20
+gospel_link_cbck: Mt/18
+gospel_link: m=2&n=147&p=18
 
 ---
 
