--- a/future-dates/2023-9-17-homily.md
+++ b/future-dates/2023-9-17-homily.md
@@ -1,18 +1,18 @@
 ---
 
-title:  연중 제24주일
+title: 연중 제24주일
 layout: post 
-image:  
+image: 
 bonstetten: true
-first_reading:  집회서 27,30―28,7
+first_reading: 집회서 27,30―28,7
 first_reading_link_cbck: Sir/27
-first_reading_link: m=2&n=151&p=8
+first_reading_link: 
 second_reading: 로마서 14,7-9
-second_reading_link_cbck: 1Pt/
-second_reading_link: m=2&n=167&p=3
+second_reading_link_cbck: Rom/14
+second_reading_link: m=2&n=152&p=14
 gospel: 마태복음 18,21-35
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=14
+gospel_link_cbck: Mt/18
+gospel_link: m=2&n=147&p=18
 
 ---
 
