--- a/future-dates/2024-1-1-homily.md
+++ b/future-dates/2024-1-1-homily.md
@@ -1,17 +1,17 @@
 ---
 
-title:  
+title: 
 layout: post 
-image:  
-first_reading:  
+image: 
+first_reading: 
 first_reading_link_cbck: 
-first_reading_link: m=1&n=133&p=37
-second_reading:  
-second_reading_link_cbck: Rom/
-second_reading_link: m=2&n=152&p=8
-gospel:  
-gospel_link_cbck: Jn/
-gospel_link: m=2&n=150&p=11
+first_reading_link: 
+second_reading: 
+second_reading_link_cbck: 
+second_reading_link: 
+gospel: 
+gospel_link_cbck: 
+gospel_link: 
 
 ---
 
