--- a/future-dates/2023-7-30-homily.md
+++ b/future-dates/2023-7-30-homily.md
@@ -5,7 +5,7 @@ layout: post
 image: 
 first_reading: 열왕기 상권 3,5-6ㄱ.7-12
 first_reading_link_cbck: 1Kgs/3
-first_reading_link: 
+first_reading_link: m=1&n=111&p=3
 second_reading: 로마서 8,28-30
 second_reading_link_cbck: Rom/8
 second_reading_link: m=2&n=152&p=8
