--- a/future-dates/2023-9-17-homily.md
+++ b/future-dates/2023-9-17-homily.md
@@ -6,7 +6,7 @@ image:
 bonstetten: true
 first_reading: 집회서 27,30―28,7
 first_reading_link_cbck: Sir/27
-first_reading_link: 
+first_reading_link: m=1&n=128&p=27
 second_reading: 로마서 14,7-9
 second_reading_link_cbck: Rom/14
 second_reading_link: m=2&n=152&p=14
