--- a/future-dates/2023-5-20-homily.md
+++ b/future-dates/2023-5-20-homily.md
@@ -13,8 +13,8 @@ gospel: 요한 14,15-21
 gospel_link_cbck: Jn/14
 gospel_link: m=2&n=150&p=14
 daily_missa: 20230521
-daily_read: https://maria.catholic.or.kr/mi_pr/missa/ordinary.asp?day=20230521&missaid=13766#missa_02
-daily_listen: https://maria.catholic.or.kr/mi_pr/missa/missa.asp?gomonth=2023-05-21
+daily_read: 20230521&missaid=13766
+daily_listen: gomonth=2023-05-21
 
 
 ---
