--- a/_posts/2020/2020-9-27-tax.md
+++ b/_posts/2020/2020-9-27-tax.md
@@ -11,6 +11,7 @@ second_reading: 필리피서 2,1-11
 second_reading_link_cbck: Phil/2
 second_reading_link: m=2&n=157&p=2
 gospel: 마태 21,28-32
+gospel_link_de: Matthäus21
 gospel_link_cbck: Mt/21
 gospel_link: m=2&n=147&p=21
 
