--- a/_posts/2021/2021-10-10-tree.md
+++ b/_posts/2021/2021-10-10-tree.md
@@ -11,6 +11,7 @@ second_reading: 히브리서4,12-13
 second_reading_link_cbck: Heb/4 
 second_reading_link: m=2&n=165&p=4
 gospel: 마르코 10,17-30
+gospel_link_de: Markus10
 gospel_link_cbck: Mk/10
 gospel_link: m=2&n=148&p=10
 
