--- a/_posts/2021/2021-11-14-sos.md
+++ b/_posts/2021/2021-11-14-sos.md
@@ -11,6 +11,7 @@ second_reading: 히브리서10,11-14.18
 second_reading_link_cbck: Heb/10 
 second_reading_link: m=2&n=165&p=10
 gospel: 마르코 13,24-32
+gospel_link_de: Markus13
 gospel_link_cbck: Mk/13
 gospel_link: m=2&n=148&p=13
 
