--- a/_posts/2021/2021-2-21-trainer.md
+++ b/_posts/2021/2021-2-21-trainer.md
@@ -11,6 +11,7 @@ second_reading: 베드로 1서 3,18-22
 second_reading_link_cbck: 1Pt/3
 second_reading_link: m=2&n=167&p=3
 gospel: 마르코 1,12-15
+gospel_link_de: Markus1
 gospel_link_cbck: Mk/1
 gospel_link: m=2&n=148&p=1
 
