--- a/_posts/2021/2021-3-28-518.md
+++ b/_posts/2021/2021-3-28-518.md
@@ -10,6 +10,7 @@ second_reading: 필리피서 2,6-11
 second_reading_link_cbck: Phil/2
 second_reading_link: m=2&n=157&p=2
 gospel: 마르코가 전한 우리 주 예수 그리스도의 수난기입니다. 14,1―15,47
+gospel_link_de: Markus14
 gospel_link_cbck: Mk/14
 gospel_link: m=2&n=148&p=14
 
