--- a/_posts/2021/2021-4-18-mug.md
+++ b/_posts/2021/2021-4-18-mug.md
@@ -11,7 +11,8 @@ second_reading: 요한 1서 2,1-5ㄱ
 second_reading_link_cbck: 1Jn/2
 second_reading_link: m=2&n=169&p=2
 gospel: 루카 24,35-48
-gospel_link_cbck: Lk/24
+gospel_link_de: Lukas24
+gospel_link_cbck:  Lk/24
 gospel_link: m=2&n=149&p=24
 
 ---
