--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -8,6 +8,7 @@ second_reading: 로마서 15,4-9
 second_reading_link_cbck: Rom/15
 second_reading_link: m=2&n=152&p=15
 gospel: 마태오 3,1-12
+gospel_link_de: Matthäus3
 gospel_link_cbck: Mt/3
 gospel_link: m=2&n=147&p=3
 image: 엄마찾아삼만리.png
