--- a/_posts/2022/2022-07-17-martha.md
+++ b/_posts/2022/2022-07-17-martha.md
@@ -10,7 +10,8 @@ second_reading: "콜로새서 1,24-28"
 second_reading_link_cbck: Col/1
 second_reading_link: m=2&n=158&p=1
 gospel: "루카복음 10,38-42"
-gospel_link_cbck: Lk/10
+gospel_link_de: Lukas10
+gospel_link_cbck:  Lk/10
 gospel_link: m=2&n=149&p=10
 image: "mary-martha.jpg"
 opening: "많은 사람들이 휴가를 갔을 때에도 누군가는 일을 해야 합니다. 우리가 쉬고 있을 때에도 누군가는 일을 하고 있습니다. 하느님이 항상 일을 하고 계시고 하느님이 일을 하지 않으시면 우리는 영원히 쉬게 됩니다."
