--- a/_posts/2022/2022-12-11-homily.md
+++ b/_posts/2022/2022-12-11-homily.md
@@ -3,6 +3,7 @@
 layout: post
 title: "대림 제 3주일"
 gospel: 마태오 11,2-11
+gospel_link_de: Matthäus11
 gospel_link_cbck: Mt/11
 gospel_link: m=2&n=147&p=11
 image: Battesimo_di_Cristo.jpg
