--- a/_posts/2022/2022-2-13-prolife.md
+++ b/_posts/2022/2022-2-13-prolife.md
@@ -11,7 +11,8 @@ second_reading: 코린토 1서 15,12.16-20
 second_reading_link_cbck: 1Cor/15
 second_reading_link: m=2&n=153&p=15
 gospel: 루카 6,17.20-26
-gospel_link_cbck: Lk/6
+gospel_link_de: Lukas6
+gospel_link_cbck:  Lk/6
 gospel_link: m=2&n=149&p=6
 
 ---
