--- a/future-dates/2023-10-22-homily.md
+++ b/future-dates/2023-10-22-homily.md
@@ -12,6 +12,7 @@ second_reading: 로마서 10,9-18
 second_reading_link_cbck: Rom/10
 second_reading_link: m=2&n=152&p=10
 gospel: 마태복음 28,16-20
+gospel_link_de: Matthäus28
 gospel_link_cbck: Mt/28
 gospel_link: m=2&n=147&p=28
 
