--- a/future-dates/2023-10-8-homily.md
+++ b/future-dates/2023-10-8-homily.md
@@ -12,6 +12,7 @@ second_reading_link_cbck: Phil/4
 second_reading_link: m=2&n=157&p=4
 gospel: 마태복음 21,33-43
 
+gospel_link_de: Matthäus21
 gospel_link_cbck: Mt/21
 gospel_link: m=2&n=147&p=21
 
