--- a/future-dates/2023-6-25-homily.md
+++ b/future-dates/2023-6-25-homily.md
@@ -10,6 +10,7 @@ second_reading: 에페소서 4,29―5,2
 second_reading_link_cbck: Eph/4
 second_reading_link: m=2&n=156&p=4
 gospel: 마태 18,19ㄴ-22
+gospel_link_de: Matthäus18
 gospel_link_cbck: Mt/18
 gospel_link: m=2&n=147&p=18
 
