--- a/future-dates/2023-7-16-homily.md
+++ b/future-dates/2023-7-16-homily.md
@@ -10,6 +10,7 @@ second_reading: 로마서 8,18-23
 second_reading_link_cbck: Rom/8
 second_reading_link: m=2&n=152&p=8
 gospel: 마태 13,1-23
+gospel_link_de: Matthäus13
 gospel_link_cbck: Mt/13
 gospel_link: m=2&n=147&p=13
 
