--- a/future-dates/2023-7-9-homily.md
+++ b/future-dates/2023-7-9-homily.md
@@ -11,6 +11,7 @@ second_reading: 로마서 8,9.11-13
 second_reading_link_cbck: Rom/8
 second_reading_link: m=2&n=152&p=8
 gospel: 마태복음 11,25-30
+gospel_link_de: Matthäus11
 gospel_link_cbck: Mt/11
 gospel_link: m=2&n=147&p=11
 
