--- a/future-dates/2023-8-27-homily.md
+++ b/future-dates/2023-8-27-homily.md
@@ -11,6 +11,7 @@ second_reading: 로마서 11,33-36
 second_reading_link_cbck: Rom/11
 second_reading_link: m=2&n=152&p=11
 gospel: 마태복음 16,13-20
+gospel_link_de: Matthäus16
 gospel_link_cbck: Mt/16
 gospel_link: m=2&n=147&p=16
 
