--- a/future-dates/2023-9-10-homily.md
+++ b/future-dates/2023-9-10-homily.md
@@ -10,6 +10,7 @@ second_reading: 로마서 13,8-10
 second_reading_link_cbck: Rom/13
 second_reading_link: m=2&n=152&p=13
 gospel: 마태복음 18,15-20
+gospel_link_de: Matthäus18
 gospel_link_cbck: Mt/18
 gospel_link: m=2&n=147&p=18
 
