--- a/future-dates/2023-9-24-homily.md
+++ b/future-dates/2023-9-24-homily.md
@@ -11,6 +11,7 @@ second_reading: 필리피서 1,20ㄷ-24.27ㄱ
 second_reading_link_cbck: Phil/1
 second_reading_link: m=2&n=157&p=1
 gospel: 마태복음 20,1-16
+gospel_link_de: Matthäus20
 gospel_link_cbck: Mt/20
 gospel_link: m=2&n=147&p=20
 
