--- a/_posts/2020/2020-12-6-buttons.md
+++ b/_posts/2020/2020-12-6-buttons.md
@@ -10,6 +10,7 @@ second_reading: 베드로 2서 3,8-14
 second_reading_link_cbck: 2Pt/3
 second_reading_link: m=2&n=168&p=3
 gospel: 마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
+gospel_link_de: Markus1
 gospel_link_cbck: Mk/1
 gospel_link: m=2&n=148&p=1
 tags: 대림
