--- a/_posts/2020/2020-5-24-doubt.md
+++ b/_posts/2020/2020-5-24-doubt.md
@@ -11,6 +11,7 @@ second_reading: 에페소서 1,17-23
 second_reading_link_cbck: Eph/1
 second_reading_link: m=2&n=156&p=1
 gospel: 마태오가 전한 거룩한 복음의 끝입니다. 28,16-20
+gospel_link_de: Matthäus28
 gospel_link_cbck: Mt/28 
 gospel_link: m=2&n=147&p=28
 
