--- a/_posts/2020/2020-6-28-shunem.md
+++ b/_posts/2020/2020-6-28-shunem.md
@@ -11,6 +11,7 @@ second_reading: 로마서 6,3-4.8-11
 second_reading_link_cbck: Rom/6
 second_reading_link: m=2&n=152&p=6
 gospel: 마태 10,37-42
+gospel_link_de: Matthäus10
 gospel_link_cbck: Mt/10
 gospel_link: m=2&n=147&p=10
 
