--- a/_posts/2021/2021-10-24-blind.md
+++ b/_posts/2021/2021-10-24-blind.md
@@ -11,6 +11,7 @@ second_reading: 로마서 10,9-18
 second_reading_link_cbck: Rom/10
 second_reading_link: m=2&n=152&p=10
 gospel: 마르코 10,46b-52 (독일어 전례력 Lesejahr B)
+gospel_link_de: Markus10
 gospel_link_cbck: Mk/10
 gospel_link: m=2&n=148&p=10
 
