--- a/_posts/2021/2021-11-28-3300.md
+++ b/_posts/2021/2021-11-28-3300.md
@@ -11,7 +11,8 @@ second_reading: 테살로니카 1서 3,12―4,2
 second_reading_link_cbck: 1Thes/3
 second_reading_link: m=2&n=159&p=3
 gospel: 루카 21,25-28.34-36
-gospel_link_cbck: Lk/21
+gospel_link_de: Lukas21
+gospel_link_cbck:  Lk/21
 gospel_link: m=2&n=149&p=21
 tags: 대림
 
