--- a/_posts/2021/2021-12-12-john.md
+++ b/_posts/2021/2021-12-12-john.md
@@ -11,7 +11,8 @@ second_reading: 필리피서 4,4-7
 second_reading_link_cbck: Phil/4
 second_reading_link: m=2&n=157&p=4
 gospel: 루카 3,10-18
-gospel_link_cbck: Lk/3
+gospel_link_de: Lukas3
+gospel_link_cbck:  Lk/3
 gospel_link: m=2&n=149&p=3
 tags: 대림
 
