--- a/_posts/2021/2021-12-9-homily.md
+++ b/_posts/2021/2021-12-9-homily.md
@@ -8,6 +8,7 @@ first_reading: 이사야서 41,13-20
 first_reading_link_cbck: Ls/41
 first_reading_link: m=1&n=129&p=41
 gospel: 마태오 11,11-15
+gospel_link_de: Matthäus11
 gospel_link_cbck: Mt/11
 gospel_link: m=2&n=147&p=11
 
