--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -8,6 +8,7 @@ second_reading: 티모테오 1서 6,11ㄱㄷ-16
 second_reading_link_cbck: 1Tm/6 
 second_reading_link: m=2&n=161&p=6
 gospel: 마태 19, 27-29
+gospel_link_de: Matthäus19
 gospel_link_cbck: Mt/19
 gospel_link: m=2&n=147&p=19
 image: Seats_inside_a_flight.jpg
