--- a/_posts/2022/2022-10-9-insider.md
+++ b/_posts/2022/2022-10-9-insider.md
@@ -8,7 +8,8 @@ second_reading: 티모테오 1서 1,12-17
 second_reading_link_cbck: 1Tm/1 
 second_reading_link: m=2&n=161&p=1
 gospel: 루카 17,11-19
-gospel_link_cbck: Lk/17
+gospel_link_de: Lukas17
+gospel_link_cbck:  Lk/17
 gospel_link: m=2&n=149&p=17
 image: naaman.jpeg
 
