--- a/_posts/2022/2022-11-27-otto.md
+++ b/_posts/2022/2022-11-27-otto.md
@@ -8,6 +8,7 @@ second_reading: 로마서 13,11-14 ᄀ
 second_reading_link_cbck: Rom/13
 second_reading_link: m=2&n=152&p=13
 gospel: 마태오 복음서 24,37-44
+gospel_link_de: Matthäus24
 gospel_link_cbck: Mt/24
 gospel_link: m=2&n=147&p=24
 image: 루돌프옷토.jpeg
