--- a/_posts/2022/2022-2-27-beam.md
+++ b/_posts/2022/2022-2-27-beam.md
@@ -8,7 +8,8 @@ second_reading: 코린토 1서 15,54-58
 second_reading_link_cbck: 1Cor/15
 second_reading_link: m=2&n=153&p=15
 gospel: 루카 6,39-45
-gospel_link_cbck: Lk/6
+gospel_link_de: Lukas6
+gospel_link_cbck:  Lk/6
 gospel_link: m=2&n=149&p=6
 image: Domenico_Fetti_-_The_Parable_of_the_Mote_and_the_Beam.jpg
 
