--- a/_posts/2022/2022-4-10-listen.md
+++ b/_posts/2022/2022-4-10-listen.md
@@ -11,7 +11,8 @@ second_reading: 필리피서 2,6-11
 second_reading_link_cbck: Phil/2
 second_reading_link: m=2&n=157&p=2
 gospel: 루카가 전한 우리 주 예수 그리스도의 수난기입니다. 22,14―23,56
-gospel_link_cbck: Lk/22
+gospel_link_de: Lukas22
+gospel_link_cbck:  Lk/22
 gospel_link: m=2&n=149&p=22
 
 ---
