--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -8,7 +8,8 @@ second_reading: 갈라티아서 5,1.13-18
 second_reading_link_cbck: Gal/5
 second_reading_link: m=2&n=155&p=5
 gospel: 루카복음 9,51-62
-gospel_link_cbck: Lk/9
+gospel_link_de: Lukas9
+gospel_link_cbck:  Lk/9
 gospel_link: m=2&n=149&p=9
 image: 오병이어.jpg
 
