--- a/_posts/2022/2022-9-11-culture.md
+++ b/_posts/2022/2022-9-11-culture.md
@@ -8,7 +8,8 @@ second_reading: 티모테오 1서1,12-17
 second_reading_link_cbck: 1Tm/1 
 second_reading_link: m=2&n=161&p=1
 gospel: 루카 15,1-32
-gospel_link_cbck: Lk/15
+gospel_link_de: Lukas15
+gospel_link_cbck:  Lk/15
 gospel_link: m=2&n=149&p=15
 image: disentis.jpeg
 
