--- a/_posts/2023/2023-2-26-homily.md
+++ b/_posts/2023/2023-2-26-homily.md
@@ -11,6 +11,7 @@ second_reading: 로마서 5,12-19
 second_reading_link_cbck: Rom/5
 second_reading_link: m=2&n=152&p=5
 gospel: 마태 4,1-11
+gospel_link_de: Matthäus4
 gospel_link_cbck: Mt/4
 gospel_link: m=2&n=147&p=4
 
