--- a/_posts/2023/2023-4-2-palm.md
+++ b/_posts/2023/2023-4-2-palm.md
@@ -8,6 +8,7 @@ second_reading: 필리 2,6-11
 second_reading_link_cbck: Phil/2
 second_reading_link: m=2&n=157&p=2
 gospel: 마태 26,14─27.66
+gospel_link_de: Matthäus26
 gospel_link_cbck: Mt/26
 gospel_link: menu=bible&m=2&n=147&p=26
 opening: "오늘 성지 주일 미사와 함께 성주간(Karwoche)이 시작됩니다. 기쁜 성주간을 맞을 준비가 되셨나요? 지금이라도 늦지 않았습니다."
