--- a/future-dates/2023-10-1-homily.md
+++ b/future-dates/2023-10-1-homily.md
@@ -12,6 +12,7 @@ second_reading_link_cbck: Phil/2
 second_reading_link: m=2&n=157&p=2
 gospel: 마태복음 21,28-32
 
+gospel_link_de: Matthäus21
 gospel_link_cbck: Mt/21
 gospel_link: m=2&n=147&p=21
 
