--- a/future-dates/2023-10-15-homily.md
+++ b/future-dates/2023-10-15-homily.md
@@ -13,6 +13,7 @@ second_reading_link_cbck: Phil/4
 second_reading_link: m=2&n=157&p=4
 gospel: 마태복음 22,1-14
 
+gospel_link_de: Matthäus22
 gospel_link_cbck: Mt/22
 gospel_link: m=2&n=147&p=22
 
