--- a/future-dates/2023-10-29-homily.md
+++ b/future-dates/2023-10-29-homily.md
@@ -11,6 +11,7 @@ second_reading: 테살로니카 1서 1,5ㄴ-10
 second_reading_link_cbck: 1Thes/1
 second_reading_link: m=2&n=159&p=1
 gospel: 마태복음 22,34-40
+gospel_link_de: Matthäus22
 gospel_link_cbck: Mt/22
 gospel_link: m=2&n=147&p=22
 
