--- a/future-dates/2023-11-26-homily.md
+++ b/future-dates/2023-11-26-homily.md
@@ -10,6 +10,7 @@ second_reading: 코린토 1서 15,20-26.28
 second_reading_link_cbck: 1Cor/15
 second_reading_link: m=2&n=153&p=15
 gospel: 마태복음 25,31-46
+gospel_link_de: Matthäus25
 gospel_link_cbck: Mt/25
 gospel_link: m=2&n=147&p=25
 
