--- a/future-dates/2023-11-5-homily.md
+++ b/future-dates/2023-11-5-homily.md
@@ -10,6 +10,7 @@ second_reading: 테살로니카 1서 2,7ㄴ-9.13
 second_reading_link_cbck: 1Thes/2
 second_reading_link: m=2&n=159&p=2
 gospel: 마태복음 23,1-12
+gospel_link_de: Matthäus23
 gospel_link_cbck: Mt/23
 gospel_link: m=2&n=147&p=23
 
