--- a/future-dates/2023-12-25-homily.md
+++ b/future-dates/2023-12-25-homily.md
@@ -10,7 +10,8 @@ second_reading: 티토서 2,11-14
 second_reading_link_cbck: Ti/2
 second_reading_link: m=2&n=163&p=2
 gospel: 루카 2,1-14
-gospel_link_cbck: Lk/2
+gospel_link_de: Lukas2
+gospel_link_cbck:  Lk/2
 gospel_link: m=2&n=149&p=2
 daily_missa: 20231225/15390
 
