--- a/future-dates/2023-6-18-homily.md
+++ b/future-dates/2023-6-18-homily.md
@@ -11,6 +11,7 @@ second_reading: 로마서 5,6-11
 second_reading_link_cbck: Rom/5
 second_reading_link: m=2&n=152&p=5
 gospel: 마태복음 9,36-10,8
+gospel_link_de: Matthäus9
 gospel_link_cbck: Mt/9
 gospel_link: m=2&n=147&p=9 
 
