--- a/future-dates/2023-7-23-homily.md
+++ b/future-dates/2023-7-23-homily.md
@@ -11,6 +11,7 @@ second_reading: 로마서 8,26-27
 second_reading_link_cbck: Rom/8
 second_reading_link: m=2&n=152&p=8
 gospel: 마태복음 13,24-43
+gospel_link_de: Matthäus13
 gospel_link_cbck: Mt/13
 gospel_link: m=2&n=147&p=13
 
