--- a/future-dates/2023-8-20-homily.md
+++ b/future-dates/2023-8-20-homily.md
@@ -10,6 +10,7 @@ second_reading: 로마서 11,13-15.29-32
 second_reading_link_cbck: Rom/11
 second_reading_link: m=2&n=152&p=11
 gospel: 마태복음 15,21-28
+gospel_link_de: Matthäus15
 gospel_link_cbck: Mt/15
 gospel_link: m=2&n=147&p=15
 
