--- a/future-dates/2023-9-17-homily.md
+++ b/future-dates/2023-9-17-homily.md
@@ -11,6 +11,7 @@ second_reading: 로마서 14,7-9
 second_reading_link_cbck: Rom/14
 second_reading_link: m=2&n=152&p=14
 gospel: 마태복음 18,21-35
+gospel_link_de: Matthäus18
 gospel_link_cbck: Mt/18
 gospel_link: m=2&n=147&p=18
 
