--- a/future-dates/2023-9-3-homily.md
+++ b/future-dates/2023-9-3-homily.md
@@ -11,6 +11,7 @@ second_reading: 로마서 12,1-2
 second_reading_link_cbck: Rom/12
 second_reading_link: m=2&n=152&p=12
 gospel: 마태복음 16,21-27
+gospel_link_de: Matthäus16
 gospel_link_cbck: Mt/16
 gospel_link: m=2&n=147&p=16
 
