--- a/_posts/2020/2020-5-24-doubt.md
+++ b/_posts/2020/2020-5-24-doubt.md
@@ -5,7 +5,8 @@ title: 주님승천대축일 (홍보 주일)
 image: plaque-with-doubting-thomas-387335.jpg
 
 first_reading: 사도행전 1,1-11
-first_reading_link_cbck: Acts/1
+first_reading_link_de: Apostelgeschichte1
+first_reading_link_cbck:  Acts/1
 first_reading_link: m=2&n=151&p=1
 second_reading: 에페소서 1,17-23
 second_reading_link_cbck: Eph/1
