--- a/_posts/2021/2021-3-14-fear.md
+++ b/_posts/2021/2021-3-14-fear.md
@@ -11,7 +11,8 @@ second_reading: 에페소서 2,4-10
 second_reading_link_cbck: Eph/2
 second_reading_link: m=2&n=156&p=2
 gospel: 요한 3,14-21
-gospel_link_cbck: Jn/3
+gospel_link_de: Johannes3
+gospel_link_cbck:  Jn/3
 gospel_link: m=2&n=150&p=3
 
 tags: 사순
