--- a/_posts/2022/2022-6-12-bahn.md
+++ b/_posts/2022/2022-6-12-bahn.md
@@ -11,7 +11,8 @@ second_reading: 로마서 5,1-5
 second_reading_link_cbck: Rom/5
 second_reading_link: m=2&n=152&p=5
 gospel: 요한 16,12-15
-gospel_link_cbck: Jn/16
+gospel_link_de: Johannes16
+gospel_link_cbck:  Jn/16
 gospel_link: m=2&n=150&p=16
 ---
 
