--- a/_posts/2023/2023-4-9-homily.md
+++ b/_posts/2023/2023-4-9-homily.md
@@ -4,13 +4,15 @@ title: 주님 부활 대축일
 layout: post 
 image: easter_anonym.jpg
 first_reading: 사도행전 10,34ㄱ.37ㄴ-43
-first_reading_link_cbck: Acts/10
+first_reading_link_de: Apostelgeschichte10
+first_reading_link_cbck:  Acts/10
 first_reading_link: m=2&n=151&p=10
 second_reading: 콜로새서 3,1-4
 second_reading_link_cbck: Col/3
 second_reading_link: m=2&n=158&p=3
 gospel: 요한 20,1-9
-gospel_link_cbck: Jn/20
+gospel_link_de: Johannes20
+gospel_link_cbck:  Jn/20
 gospel_link: m=2&n=150&p=20
 
 ---
