--- a/_posts/2021/2021-12-25-fire.md
+++ b/_posts/2021/2021-12-25-fire.md
@@ -11,7 +11,8 @@ second_reading: 히브리서1,1-6
 second_reading_link_cbck: Heb/1 
 second_reading_link: m=2&n=165&p=1
 gospel: 요한 1,1-18
-gospel_link_cbck: Jn/1
+gospel_link_de: Johannes1
+gospel_link_cbck:  Jn/1
 gospel_link: m=2&n=150&p=1
 tags: 성탄
 
