--- a/_posts/2021/2021-7-25-war.md
+++ b/_posts/2021/2021-7-25-war.md
@@ -11,7 +11,8 @@ second_reading: 에페소서 4,1-6
 second_reading_link_cbck: Eph/4
 second_reading_link: m=2&n=156&p=4
 gospel: 요한 6,1-15
-gospel_link_cbck: Jn/6
+gospel_link_de: Johannes6
+gospel_link_cbck:  Jn/6
 gospel_link: m=2&n=150&p=6
 
 
