--- a/_posts/2023/2023-3-12-homily.md
+++ b/_posts/2023/2023-3-12-homily.md
@@ -11,7 +11,8 @@ second_reading: 로마서 5,1-2.5-8
 second_reading_link_cbck: Rom/5
 second_reading_link: m=2&n=152&p=5
 gospel: 요한 4,5-42
-gospel_link_cbck: Jn/4
+gospel_link_de: Johannes4
+gospel_link_cbck:  Jn/4
 gospel_link: m=2&n=150&p=4
 tags: 사순
 
