--- a/future-dates/2023-6-11-homily.md
+++ b/future-dates/2023-6-11-homily.md
@@ -10,7 +10,8 @@ second_reading: 코린토 1서 10,16-17
 second_reading_link_cbck: 1Cor/10
 second_reading_link: m=2&n=153&p=10
 gospel: 요한 6,51-58
-gospel_link_cbck: Jn/6
+gospel_link_de: Johannes6
+gospel_link_cbck:  Jn/6
 gospel_link: m=2&n=150&p=6
 
 ---
