--- a/future-dates/2023-6-4-homily.md
+++ b/future-dates/2023-6-4-homily.md
@@ -11,7 +11,8 @@ second_reading: 코린토 2서 13,11-13
 second_reading_link_cbck: 2Cor/13
 second_reading_link: m=2&n=154&p=13
 gospel: 요한 3,16-18
-gospel_link_cbck: Jn/3
+gospel_link_de: Johannes3
+gospel_link_cbck:  Jn/3
 gospel_link: m=2&n=150&p=3 
 
 ---
