--- a/_posts/2020/2020-10-11-marry.md
+++ b/_posts/2020/2020-10-11-marry.md
@@ -5,7 +5,8 @@ title: 연중 28주일
 image: cana.jpeg
 
 first_reading: 이사야서 25,6-10ㄱ
-first_reading_link_cbck: Ls/25
+first_reading_link_de: Jesaja25
+first_reading_link_cbck:  Ls/25
 first_reading_link: m=1&n=129&p=25
 second_reading: 필리피서 4,12-14.19-20
 second_reading_link_cbck: Phil/4
