--- a/_posts/2021/2021-3-28-518.md
+++ b/_posts/2021/2021-3-28-518.md
@@ -4,7 +4,8 @@ layout: post
 title: 성지주일 
 image: 이경남.jpeg
 first_reading: 이사야서 50,4-7
-first_reading_link_cbck: Ls/50
+first_reading_link_de: Jesaja50
+first_reading_link_cbck:  Ls/50
 first_reading_link: m=1&n=129&p=50
 second_reading: 필리피서 2,6-11
 second_reading_link_cbck: Phil/2
