--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -2,7 +2,8 @@
 layout: post
 title: 부활주일
 first_reading: 이사야서 11,1-10
-first_reading_link_cbck: Ls/11
+first_reading_link_de: Jesaja11
+first_reading_link_cbck:  Ls/11
 first_reading_link: m=1&n=129&p=11
 second_reading: 로마서 15,4-9
 second_reading_link_cbck: Rom/15
