--- a/_posts/2022/2022-12-11-homily.md
+++ b/_posts/2022/2022-12-11-homily.md
@@ -8,7 +8,8 @@ gospel_link_cbck: Mt/11
 gospel_link: m=2&n=147&p=11
 image: Battesimo_di_Cristo.jpg
 first_reading: 이사야서 35,1-6ㄴ.10
-first_reading_link_cbck: Ls/35
+first_reading_link_de: Jesaja35
+first_reading_link_cbck:  Ls/35
 first_reading_link: m=1&n=129&p=35
 second_reading: 야고보서 5,7-10
 second_reading_link_cbck: Jas/5 
