--- a/future-dates/2023-12-10-homily.md
+++ b/future-dates/2023-12-10-homily.md
@@ -4,7 +4,8 @@ title: 대림 제2주일(인권 주일, 사회 교리 주간)
 layout: post 
 image: 
 first_reading: 이사야서 40,1-5.9-11
-first_reading_link_cbck: Ls/40
+first_reading_link_de: Jesaja40
+first_reading_link_cbck:  Ls/40
 first_reading_link: m=1&n=129&p=40
 second_reading: 베드로 2서 3,8-14 
 second_reading_link_cbck: 2Pt/3
