--- a/future-dates/2023-9-24-homily.md
+++ b/future-dates/2023-9-24-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 이사야서 55,6-9
-first_reading_link_cbck: Ls/55
+first_reading_link_de: Jesaja55
+first_reading_link_cbck:  Ls/55
 first_reading_link: m=1&n=129&p=55
 second_reading: 필리피서 1,20ㄷ-24.27ㄱ
 second_reading_link_cbck: Phil/1
