--- a/_posts/2020/2020-1-26-homily.md
+++ b/_posts/2020/2020-1-26-homily.md
@@ -4,7 +4,8 @@ layout: post
 title: 연중 제3주일 (해외 원조 주일)
 image: capernaum.jpeg
 first_reading: 이사야서 8,23ㄷ―9,3
-first_reading_link_cbck: Ls/8
+first_reading_link_de: Jesaja8
+first_reading_link_cbck:  Ls/8
 first_reading_link: m=1&n=129&p=8
 second_reading: 코린토 1서 1,10-13.17
 second_reading_link_cbck: 1Cor/1
