--- a/_posts/2020/2020-12-13-wait.md
+++ b/_posts/2020/2020-12-13-wait.md
@@ -5,7 +5,8 @@ title: 대림 제3주일 (자선 주일)
 
 
 first_reading: 이사야서 61,1-2ㄱ.10-11
-first_reading_link_cbck: Ls/61
+first_reading_link_de: Jesaja61
+first_reading_link_cbck:  Ls/61
 first_reading_link: m=1&n=129&p=61
 second_reading: 테살로니카 1서 5,16-24
 second_reading_link_cbck: 1Thes/5
