--- a/_posts/2021/2021-4-18-mug.md
+++ b/_posts/2021/2021-4-18-mug.md
@@ -5,7 +5,8 @@ title: 부활 제 3주일
 image: mug.jpg
 
 first_reading: 사도행전 3,13-15.17-19
-first_reading_link_cbck: Acts/3
+first_reading_link_de: Apostelgeschichte3
+first_reading_link_cbck:  Acts/3
 first_reading_link: m=2&n=151&p=3
 second_reading: 요한 1서 2,1-5ㄱ
 second_reading_link_cbck: 1Jn/2
