--- a/_posts/2022/2022-11-27-otto.md
+++ b/_posts/2022/2022-11-27-otto.md
@@ -2,7 +2,8 @@
 layout: post
 title: 대림 첫 주일
 first_reading: 이사야서 2,1-5
-first_reading_link_cbck: Ls/2
+first_reading_link_de: Jesaja2
+first_reading_link_cbck:  Ls/2
 first_reading_link: m=1&n=129&p=2
 second_reading: 로마서 13,11-14 ᄀ
 second_reading_link_cbck: Rom/13
