--- a/_posts/2022/2022-4-10-listen.md
+++ b/_posts/2022/2022-4-10-listen.md
@@ -5,7 +5,8 @@ title: 주님 수난 성지 주일
 image: listen.jpg
 
 first_reading: 이사야서 50,4-7
-first_reading_link_cbck: Ls/50
+first_reading_link_de: Jesaja50
+first_reading_link_cbck:  Ls/50
 first_reading_link: m=1&n=129&p=50
 second_reading: 필리피서 2,6-11
 second_reading_link_cbck: Phil/2
