--- a/future-dates/2023-10-15-homily.md
+++ b/future-dates/2023-10-15-homily.md
@@ -6,7 +6,8 @@ image:
 bonstetten: true
 first_reading: 이사야서 25,6-10ㄱ
 
-first_reading_link_cbck: Ls/25
+first_reading_link_de: Jesaja25
+first_reading_link_cbck:  Ls/25
 first_reading_link: m=1&n=129&p=25
 second_reading: 필리피서 4,12-14.19-20
 second_reading_link_cbck: Phil/4
