--- a/future-dates/2023-10-22-homily.md
+++ b/future-dates/2023-10-22-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 first_reading: 이사야서 2,1-5
 
-first_reading_link_cbck: Ls/2
+first_reading_link_de: Jesaja2
+first_reading_link_cbck:  Ls/2
 first_reading_link: m=1&n=129&p=2
 second_reading: 로마서 10,9-18
 
