--- a/future-dates/2023-10-8-homily.md
+++ b/future-dates/2023-10-8-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 이사야서 5,1-7
-first_reading_link_cbck: Ls/5
+first_reading_link_de: Jesaja5
+first_reading_link_cbck:  Ls/5
 first_reading_link: m=1&n=129&p=5
 second_reading: 필리피서 4,6-9
 second_reading_link_cbck: Phil/4
