--- a/future-dates/2023-12-25-homily.md
+++ b/future-dates/2023-12-25-homily.md
@@ -4,7 +4,8 @@ title: 주님 성탄 대축일 - 낮 미사
 layout: post 
 image: 
 first_reading: 이사야서 9,1-6 
-first_reading_link_cbck: Ls/9
+first_reading_link_de: Jesaja9
+first_reading_link_cbck:  Ls/9
 first_reading_link: m=1&n=129&p=9
 second_reading: 티토서 2,11-14
 second_reading_link_cbck: Ti/2
