--- a/future-dates/2023-8-20-homily.md
+++ b/future-dates/2023-8-20-homily.md
@@ -4,7 +4,8 @@ title: 연중 제20주일
 layout: post 
 image: 
 first_reading: 이사야서 56,1.6-7
-first_reading_link_cbck: Ls/56
+first_reading_link_de: Jesaja56
+first_reading_link_cbck:  Ls/56
 first_reading_link: m=1&n=129&p=56
 second_reading: 로마서 11,13-15.29-32
 second_reading_link_cbck: Rom/11
