--- a/future-dates/2023-8-27-homily.md
+++ b/future-dates/2023-8-27-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 이사야서 22,19-2312,13.16-19
-first_reading_link_cbck: Ls/22
+first_reading_link_de: Jesaja22
+first_reading_link_cbck:  Ls/22
 first_reading_link: m=1&n=129&p=22
 second_reading: 로마서 11,33-36
 second_reading_link_cbck: Rom/11
