--- a/_posts/2021/2021-7-25-war.md
+++ b/_posts/2021/2021-7-25-war.md
@@ -5,7 +5,8 @@ title: 연중 제17주일
 image: war.jpeg
 
 first_reading: 열왕기 하권 4,42-44
-first_reading_link_cbck: 2Kgs/4
+first_reading_link_de: 2.Könige4
+first_reading_link_cbck:  2Kgs/4
 first_reading_link: m=1&n=112&p=4
 second_reading: 에페소서 4,1-6
 second_reading_link_cbck: Eph/4
