--- a/_posts/2022/2022-6-12-bahn.md
+++ b/_posts/2022/2022-6-12-bahn.md
@@ -5,7 +5,8 @@ title: 지극히 거룩하신 삼위일체 대축일
 image: road.jpeg
 
 first_reading: 잠언 8,22-31
-first_reading_link_cbck: Prv/8
+first_reading_link_de: Sprüche8
+first_reading_link_cbck:  Prv/8
 first_reading_link: m=1&n=124&p=8
 second_reading: 로마서 5,1-5
 second_reading_link_cbck: Rom/5
