--- a/_posts/2023/2023-3-12-homily.md
+++ b/_posts/2023/2023-3-12-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: water.jpg
 
 first_reading: 탈출기 17,3-7
-first_reading_link_cbck: Ex/17
+first_reading_link_de: 2.Mose17
+first_reading_link_cbck:  Ex/17
 first_reading_link: m=1&n=102&p=17
 second_reading: 로마서 5,1-2.5-8
 second_reading_link_cbck: Rom/5
