--- a/_posts/2023/2023-3-26-lazarus.md
+++ b/_posts/2023/2023-3-26-lazarus.md
@@ -4,7 +4,8 @@ title: 사순 제 5주일
 layout: post 
 image: lazarus.jpg
 first_reading: 에제키엘 예언서 37,12ㄹ - 14
-first_reading_link_cbck: Ez/37
+first_reading_link_de: Hesekiel37
+first_reading_link_cbck:  Ez/37
 first_reading_link: m=1&n=133&p=37
 second_reading: 로마서 8,8 - 11
 second_reading_link_cbck: Rom/8
