--- a/_posts/2023/2023-4-2-palm.md
+++ b/_posts/2023/2023-4-2-palm.md
@@ -5,7 +5,8 @@ title: 주님 수난 성지 주일
 image: palm_bonstetten.jpg
 bonstetten: true
 second_reading: 필리 2,6-11
-second_reading_link_cbck: Phil/2
+second_reading_link_de: Philipper2
+second_reading_link_cbck:  Phil/2
 second_reading_link: m=2&n=157&p=2
 gospel: 마태 26,14─27.66
 gospel_link_de: Matthäus26
