--- a/_posts/2023/2023-4-23-homily.md
+++ b/_posts/2023/2023-4-23-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Apostelgeschichte2
 first_reading_link_cbck:  Acts/2
 first_reading_link: m=2&n=151&p=2
 second_reading: 베드로 1서 1,17-21
-second_reading_link_cbck: 1Pt/1
+second_reading_link_de: 1.Petrus1
+second_reading_link_cbck:  1Pt/1
 second_reading_link: m=2&n=167&p=1
 gospel: 요한 21, 1-14
 gospel_link_de: Johannes21
