--- a/future-dates/2023-10-8-homily.md
+++ b/future-dates/2023-10-8-homily.md
@@ -9,7 +9,8 @@ first_reading_link_de: Jesaja5
 first_reading_link_cbck:  Ls/5
 first_reading_link: m=1&n=129&p=5
 second_reading: 필리피서 4,6-9
-second_reading_link_cbck: Phil/4
+second_reading_link_de: Philipper4
+second_reading_link_cbck:  Phil/4
 second_reading_link: m=2&n=157&p=4
 gospel: 마태복음 21,33-43
 
