--- a/future-dates/2023-11-12-homily.md
+++ b/future-dates/2023-11-12-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 지혜서 6,12-16
-first_reading_link_cbck: Wis/6
+first_reading_link_de: Weisheit6
+first_reading_link_cbck:  Wis/6
 first_reading_link: m=1&n=127&p=6
 second_reading: 테살로니카 1서 4,13-18
 second_reading_link_cbck: 1Thes/4
