--- a/future-dates/2023-11-19-homily.md
+++ b/future-dates/2023-11-19-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 잠언 31,10-13.19-20.30-31
-first_reading_link_cbck: Prv/31
+first_reading_link_de: Sprüche31
+first_reading_link_cbck:  Prv/31
 first_reading_link: m=1&n=124&p=31
 second_reading: 테살로니카 1서 5,1-6
 second_reading_link_cbck: 1Thes/5
