--- a/future-dates/2023-11-5-homily.md
+++ b/future-dates/2023-11-5-homily.md
@@ -4,7 +4,8 @@ title: 연중 제31주일
 layout: post 
 image: 
 first_reading:  말라키 예언서 1,14ㄴ-2,2ㄴ.8-10
-first_reading_link_cbck: Mal/1
+first_reading_link_de: Maleachi1
+first_reading_link_cbck:  Mal/1
 first_reading_link: m=1&n=146&p=1
 second_reading: 테살로니카 1서 2,7ㄴ-9.13 
 second_reading_link_cbck: 1Thes/2
