--- a/future-dates/2023-12-10-homily.md
+++ b/future-dates/2023-12-10-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Jesaja40
 first_reading_link_cbck:  Ls/40
 first_reading_link: m=1&n=129&p=40
 second_reading: 베드로 2서 3,8-14 
-second_reading_link_cbck: 2Pt/3
+second_reading_link_de: 2.Petrus3
+second_reading_link_cbck:  2Pt/3
 second_reading_link: m=2&n=168&p=3
 gospel: 마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
 gospel_link_de: Markus1
