--- a/future-dates/2023-5-28-homily.md
+++ b/future-dates/2023-5-28-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Apostelgeschichte2
 first_reading_link_cbck:  Acts/2
 first_reading_link: m=2&n=151&p=2
 second_reading: 코린토 1서 12,3ㄷ-7.12-13
-second_reading_link_cbck: 1Cor/12
+second_reading_link_de: 1.Korinther12
+second_reading_link_cbck:  1Cor/12
 second_reading_link: m=2&n=153&p=12
 gospel: 요한 20,19-23
 gospel_link_de: Johannes20
