--- a/future-dates/2023-7-23-homily.md
+++ b/future-dates/2023-7-23-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 지혜서 12,13.16-19
-first_reading_link_cbck: Wis/12
+first_reading_link_de: Weisheit12
+first_reading_link_cbck:  Wis/12
 first_reading_link: m=1&n=127&p=12
 second_reading: 로마서 8,26-27
 second_reading_link_cbck: Rom/8
