--- a/_posts/2020/2020-1-26-homily.md
+++ b/_posts/2020/2020-1-26-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Jesaja8
 first_reading_link_cbck:  Ls/8
 first_reading_link: m=1&n=129&p=8
 second_reading: 코린토 1서 1,10-13.17
-second_reading_link_cbck: 1Cor/1
+second_reading_link_de: 1.Korinther1
+second_reading_link_cbck:  1Cor/1
 second_reading_link: m=2&n=153&p=1
 gospel: 마태 4,12-23
 gospel_link_de: Matthäus4
