--- a/_posts/2020/2020-10-11-marry.md
+++ b/_posts/2020/2020-10-11-marry.md
@@ -9,7 +9,8 @@ first_reading_link_de: Jesaja25
 first_reading_link_cbck:  Ls/25
 first_reading_link: m=1&n=129&p=25
 second_reading: 필리피서 4,12-14.19-20
-second_reading_link_cbck: Phil/4
+second_reading_link_de: Philipper4
+second_reading_link_cbck:  Phil/4
 second_reading_link: m=2&n=157&p=4
 gospel: 마태 22,1-14
 gospel_link_de: Matthäus22
