--- a/_posts/2021/2021-11-28-3300.md
+++ b/_posts/2021/2021-11-28-3300.md
@@ -5,7 +5,8 @@ title: 대림 첫째주일
 image: 3300.jpg
 
 first_reading: 예레미야서 33,14-16
-first_reading_link_cbck: Jer/33
+first_reading_link_de: Jeremia33
+first_reading_link_cbck:  Jer/33
 first_reading_link: m=1&n=130&p=33
 second_reading: 테살로니카 1서 3,12―4,2
 second_reading_link_cbck: 1Thes/3
