--- a/_posts/2021/2021-2-21-trainer.md
+++ b/_posts/2021/2021-2-21-trainer.md
@@ -8,7 +8,8 @@ first_reading: 창세기 9,8-15
 first_reading_link_cbck: Gn/9
 first_reading_link: m=1&n=101&p=9
 second_reading: 베드로 1서 3,18-22 
-second_reading_link_cbck: 1Pt/3
+second_reading_link_de: 1.Petrus3
+second_reading_link_cbck:  1Pt/3
 second_reading_link: m=2&n=167&p=3
 gospel: 마르코 1,12-15
 gospel_link_de: Markus1
