--- a/_posts/2022/2022-10-9-insider.md
+++ b/_posts/2022/2022-10-9-insider.md
@@ -2,7 +2,8 @@
 layout: post
 title: 연중 제28주일
 first_reading: 열왕기 하권 5,14-17
-first_reading_link_cbck: 2Kgs/5
+first_reading_link_de: 2.Könige5
+first_reading_link_cbck:  2Kgs/5
 first_reading_link: m=2&n=112&p=5
 second_reading: 티모테오 1서 1,12-17
 second_reading_link_cbck: 1Tm/1 
