--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -2,7 +2,8 @@
 layout: post
 title: ""
 first_reading: 열왕기 상 19,16 ᄂ.19-21
-first_reading_link_cbck: 1Kgs/19
+first_reading_link_de: 1.Könige19
+first_reading_link_cbck:  1Kgs/19
 first_reading_link: m=1&n=111&p=19
 second_reading: 갈라티아서 5,1.13-18
 second_reading_link_cbck: Gal/5
