--- a/_posts/2023/2023-2-12-homily.md
+++ b/_posts/2023/2023-2-12-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: ironlung.jpeg
 
 first_reading: 집회서 15,15-20
-first_reading_link_cbck: Sir/15
+first_reading_link_de: Jesus%20Sirach15
+first_reading_link_cbck:  Sir/15
 first_reading_link: m=1&n=128&p=15
 second_reading: 코린토 1서 2,6-10
 second_reading_link_cbck: 1Cor/2
