--- a/_posts/2023/2023-5-14-homily.md
+++ b/_posts/2023/2023-5-14-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Apostelgeschichte8
 first_reading_link_cbck:  Acts/8
 first_reading_link: m=2&n=151&p=8
 second_reading: 베드로 1서 3,15-18
-second_reading_link_cbck: 1Pt/3
+second_reading_link_de: 1.Petrus3
+second_reading_link_cbck:  1Pt/3
 second_reading_link: m=2&n=167&p=3
 gospel: 요한 14,15-21
 gospel_link_de: Johannes14
