--- a/future-dates/2023-6-18-homily.md
+++ b/future-dates/2023-6-18-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 탈출기 19,2-6ㄱ
-first_reading_link_cbck: Ex/19
+first_reading_link_de: 2.Mose19
+first_reading_link_cbck:  Ex/19
 first_reading_link: m=1&n=102&p=19
 second_reading: 로마서 5,6-11
 second_reading_link_cbck: Rom/5
