--- a/future-dates/2023-6-25-homily.md
+++ b/future-dates/2023-6-25-homily.md
@@ -4,7 +4,8 @@ title: 민족의 화해와 일치를 위한 기도의 날 - 남북통일 기원 
 layout: post 
 image: 
 first_reading: 신명기 30,1-5
-first_reading_link_cbck: Dt/30
+first_reading_link_de: 5.Mose30
+first_reading_link_cbck:  Dt/30
 first_reading_link: m=1&n=105&p=30
 second_reading: 에페소서 4,29―5,2 
 second_reading_link_cbck: Eph/4
