--- a/future-dates/2023-7-30-homily.md
+++ b/future-dates/2023-7-30-homily.md
@@ -4,7 +4,8 @@ title: 연중 제17주일
 layout: post 
 image: 
 first_reading: 열왕기 상권 3,5-6ㄱ.7-12
-first_reading_link_cbck: 1Kgs/3
+first_reading_link_de: 1.Könige3
+first_reading_link_cbck:  1Kgs/3
 first_reading_link: m=1&n=111&p=3
 second_reading: 로마서 8,28-30
 second_reading_link_cbck: Rom/8
