--- a/future-dates/2023-7-9-homily.md
+++ b/future-dates/2023-7-9-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 즈카르야 예언서 9,9-10
-first_reading_link_cbck: Zec/9
+first_reading_link_de: Sacharja9
+first_reading_link_cbck:  Zec/9
 first_reading_link: m=1&n=145&p=9
 second_reading: 로마서 8,9.11-13
 second_reading_link_cbck: Rom/8
