--- a/future-dates/2023-9-10-homily.md
+++ b/future-dates/2023-9-10-homily.md
@@ -4,7 +4,8 @@ title: 연중 제23주일
 layout: post 
 image: 
 first_reading: 에제키엘 예언서 33,7-9
-first_reading_link_cbck: Ez/33
+first_reading_link_de: Hesekiel33
+first_reading_link_cbck:  Ez/33
 first_reading_link: m=1&n=133&p=33
 second_reading: 로마서 13,8-10
 second_reading_link_cbck: Rom/13
