--- a/future-dates/2023-9-3-homily.md
+++ b/future-dates/2023-9-3-homily.md
@@ -5,7 +5,8 @@ layout: post
 image: 
 bonstetten: true
 first_reading: 예레미야서 20,7-9
-first_reading_link_cbck: Jer/20
+first_reading_link_de: Jeremia20
+first_reading_link_cbck:  Jer/20
 first_reading_link: m=1&n=130&p=20
 second_reading: 로마서 12,1-2
 second_reading_link_cbck: Rom/12
