--- a/_posts/2021/2021-10-10-tree.md
+++ b/_posts/2021/2021-10-10-tree.md
@@ -8,8 +8,9 @@ first_reading: 지혜서 7,7-11
 first_reading_link_de: Weisheit7
 first_reading_link_cbck:  Wis/7
 first_reading_link: m=1&n=127&p=7
-second_reading: 히브리서4,12-13
-second_reading_link_cbck: Heb/4 
+second_reading: 히브리서 4,12-13
+second_reading_link_de: Hebräer4
+second_reading_link_cbck:  Heb/4 
 second_reading_link: m=2&n=165&p=4
 gospel: 마르코 10,17-30
 gospel_link_de: Markus10
