--- a/_posts/2021/2021-11-28-3300.md
+++ b/_posts/2021/2021-11-28-3300.md
@@ -9,7 +9,8 @@ first_reading_link_de: Jeremia33
 first_reading_link_cbck:  Jer/33
 first_reading_link: m=1&n=130&p=33
 second_reading: 테살로니카 1서 3,12―4,2
-second_reading_link_cbck: 1Thes/3
+second_reading_link_de: 1.Thessalonicher3
+second_reading_link_cbck:  1Thes/3
 second_reading_link: m=2&n=159&p=3
 gospel: 루카 21,25-28.34-36
 gospel_link_de: Lukas21
