--- a/_posts/2021/2021-7-25-war.md
+++ b/_posts/2021/2021-7-25-war.md
@@ -9,7 +9,8 @@ first_reading_link_de: 2.Könige4
 first_reading_link_cbck:  2Kgs/4
 first_reading_link: m=1&n=112&p=4
 second_reading: 에페소서 4,1-6
-second_reading_link_cbck: Eph/4
+second_reading_link_de: Epheser4
+second_reading_link_cbck:  Eph/4
 second_reading_link: m=2&n=156&p=4
 gospel: 요한 6,1-15
 gospel_link_de: Johannes6
