--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -5,7 +5,8 @@ first_reading: 로마 14, 17-19
 first_reading_link_cbck: Rom/14
 first_reading_link: m=2&n=152&p=14
 second_reading: 티모테오 1서 6,11ㄱㄷ-16
-second_reading_link_cbck: 1Tm/6 
+second_reading_link_de: 1.Timotheus6
+second_reading_link_cbck:  1Tm/6 
 second_reading_link: m=2&n=161&p=6
 gospel: 마태 19, 27-29
 gospel_link_de: Matthäus19
