--- a/_posts/2023/2023-3-26-lazarus.md
+++ b/_posts/2023/2023-3-26-lazarus.md
@@ -8,7 +8,8 @@ first_reading_link_de: Hesekiel37
 first_reading_link_cbck:  Ez/37
 first_reading_link: m=1&n=133&p=37
 second_reading: 로마서 8,8 - 11
-second_reading_link_cbck: Rom/8
+second_reading_link_de: Römer8
+second_reading_link_cbck:  Rom/8
 second_reading_link: m=2&n=152&p=8
 gospel: 요한 복음서 11,1 - 45
 gospel_link_de: Johannes11
