--- a/future-dates/2023-7-23-homily.md
+++ b/future-dates/2023-7-23-homily.md
@@ -9,7 +9,8 @@ first_reading_link_de: Weisheit12
 first_reading_link_cbck:  Wis/12
 first_reading_link: m=1&n=127&p=12
 second_reading: 로마서 8,26-27
-second_reading_link_cbck: Rom/8
+second_reading_link_de: Römer8
+second_reading_link_cbck:  Rom/8
 second_reading_link: m=2&n=152&p=8
 gospel: 마태복음 13,24-43
 gospel_link_de: Matthäus13
