--- a/_posts/2020/2020-12-13-wait.md
+++ b/_posts/2020/2020-12-13-wait.md
@@ -9,7 +9,8 @@ first_reading_link_de: Jesaja61
 first_reading_link_cbck:  Ls/61
 first_reading_link: m=1&n=129&p=61
 second_reading: 테살로니카 1서 5,16-24
-second_reading_link_cbck: 1Thes/5
+second_reading_link_de: 1.Thessalonicher5
+second_reading_link_cbck:  1Thes/5
 second_reading_link: m=2&n=159&p=5
 gospel: 요한 1,6-8.19-28
 gospel_link_de: Johannes1
