--- a/_posts/2021/2021-10-24-blind.md
+++ b/_posts/2021/2021-10-24-blind.md
@@ -9,7 +9,8 @@ first_reading_link_de: Jesaja2
 first_reading_link_cbck:  Ls/2
 first_reading_link: m=1&n=129&p=2
 second_reading: 로마서 10,9-18
-second_reading_link_cbck: Rom/10
+second_reading_link_de: Römer10
+second_reading_link_cbck:  Rom/10
 second_reading_link: m=2&n=152&p=10
 gospel: 마르코 10,46b-52 (독일어 전례력 Lesejahr B)
 gospel_link_de: Markus10
