--- a/_posts/2021/2021-12-25-fire.md
+++ b/_posts/2021/2021-12-25-fire.md
@@ -8,8 +8,9 @@ first_reading: 이사야서52,7-10
 first_reading_link_de: Jesaja52
 first_reading_link_cbck:  Ls/52
 first_reading_link: m=1&n=129&p=52
-second_reading: 히브리서1,1-6 
-second_reading_link_cbck: Heb/1 
+second_reading: 히브리서 1,1-6 
+second_reading_link_de: Hebräer1
+second_reading_link_cbck:  Heb/1 
 second_reading_link: m=2&n=165&p=1
 gospel: 요한 1,1-18
 gospel_link_de: Johannes1
