--- a/_posts/2021/2021-3-14-fear.md
+++ b/_posts/2021/2021-3-14-fear.md
@@ -8,7 +8,8 @@ first_reading: 역대기 하권36,14-16.19-23
 first_reading_link_cbck: 2Chr/36
 first_reading_link: m=1&n=133&p=37
 second_reading: 에페소서 2,4-10
-second_reading_link_cbck: Eph/2
+second_reading_link_de: Epheser2
+second_reading_link_cbck:  Eph/2
 second_reading_link: m=2&n=156&p=2
 gospel: 요한 3,14-21
 gospel_link_de: Johannes3
