--- a/_posts/2021/2021-4-18-mug.md
+++ b/_posts/2021/2021-4-18-mug.md
@@ -9,7 +9,8 @@ first_reading_link_de: Apostelgeschichte3
 first_reading_link_cbck:  Acts/3
 first_reading_link: m=2&n=151&p=3
 second_reading: 요한 1서 2,1-5ㄱ
-second_reading_link_cbck: 1Jn/2
+second_reading_link_de: 1.Johannes2
+second_reading_link_cbck:  1Jn/2
 second_reading_link: m=2&n=169&p=2
 gospel: 루카 24,35-48
 gospel_link_de: Lukas24
