--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -6,7 +6,8 @@ first_reading_link_de: Jesaja11
 first_reading_link_cbck:  Ls/11
 first_reading_link: m=1&n=129&p=11
 second_reading: 로마서 15,4-9
-second_reading_link_cbck: Rom/15
+second_reading_link_de: Römer15
+second_reading_link_cbck:  Rom/15
 second_reading_link: m=2&n=152&p=15
 gospel: 마태오 3,1-12
 gospel_link_de: Matthäus3
