--- a/_posts/2022/2022-07-17-martha.md
+++ b/_posts/2022/2022-07-17-martha.md
@@ -7,7 +7,8 @@ first_reading: "창세기 18,1-10ㄴ"
 first_reading_link_cbck: Gn/18
 first_reading_link: m=1&n=101&p=18
 second_reading: "콜로새서 1,24-28"
-second_reading_link_cbck: Col/1
+second_reading_link_de: Kolosser1
+second_reading_link_cbck:  Col/1
 second_reading_link: m=2&n=158&p=1
 gospel: "루카복음 10,38-42"
 gospel_link_de: Lukas10
