--- a/_posts/2022/2022-10-9-insider.md
+++ b/_posts/2022/2022-10-9-insider.md
@@ -6,7 +6,8 @@ first_reading_link_de: 2.Könige5
 first_reading_link_cbck:  2Kgs/5
 first_reading_link: m=2&n=112&p=5
 second_reading: 티모테오 1서 1,12-17
-second_reading_link_cbck: 1Tm/1 
+second_reading_link_de: 1.Timotheus1
+second_reading_link_cbck:  1Tm/1 
 second_reading_link: m=2&n=161&p=1
 gospel: 루카 17,11-19
 gospel_link_de: Lukas17
