--- a/_posts/2022/2022-12-11-homily.md
+++ b/_posts/2022/2022-12-11-homily.md
@@ -12,7 +12,8 @@ first_reading_link_de: Jesaja35
 first_reading_link_cbck:  Ls/35
 first_reading_link: m=1&n=129&p=35
 second_reading: 야고보서 5,7-10
-second_reading_link_cbck: Jas/5 
+second_reading_link_de: Jakobus5
+second_reading_link_cbck:  Jas/5 
 second_reading_link: m=2&n=166&p=5
 tags: 대림
 
