--- a/_posts/2022/2022-6-12-bahn.md
+++ b/_posts/2022/2022-6-12-bahn.md
@@ -9,7 +9,8 @@ first_reading_link_de: Sprüche8
 first_reading_link_cbck:  Prv/8
 first_reading_link: m=1&n=124&p=8
 second_reading: 로마서 5,1-5
-second_reading_link_cbck: Rom/5
+second_reading_link_de: Römer5
+second_reading_link_cbck:  Rom/5
 second_reading_link: m=2&n=152&p=5
 gospel: 요한 16,12-15
 gospel_link_de: Johannes16
