--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -6,7 +6,8 @@ first_reading_link_de: 1.Könige19
 first_reading_link_cbck:  1Kgs/19
 first_reading_link: m=1&n=111&p=19
 second_reading: 갈라티아서 5,1.13-18
-second_reading_link_cbck: Gal/5
+second_reading_link_de: Galater5
+second_reading_link_cbck:  Gal/5
 second_reading_link: m=2&n=155&p=5
 gospel: 루카복음 9,51-62
 gospel_link_de: Lukas9
