--- a/_posts/2022/2022-9-11-culture.md
+++ b/_posts/2022/2022-9-11-culture.md
@@ -5,8 +5,9 @@ first_reading: 탈출기 32,7-11.13-14
 first_reading_link_de: 2.Mose32
 first_reading_link_cbck:  Ex/32
 first_reading_link: m=1&n=102&p=32
-second_reading: 티모테오 1서1,12-17
-second_reading_link_cbck: 1Tm/1 
+second_reading: 티모테오 1서 1,12-17
+second_reading_link_de: 1.Timotheus1
+second_reading_link_cbck:  1Tm/1 
 second_reading_link: m=2&n=161&p=1
 gospel: 루카 15,1-32
 gospel_link_de: Lukas15
