--- a/future-dates/2023-10-22-homily.md
+++ b/future-dates/2023-10-22-homily.md
@@ -10,7 +10,8 @@ first_reading_link_cbck:  Ls/2
 first_reading_link: m=1&n=129&p=2
 second_reading: 로마서 10,9-18
 
-second_reading_link_cbck: Rom/10
+second_reading_link_de: Römer10
+second_reading_link_cbck:  Rom/10
 second_reading_link: m=2&n=152&p=10
 gospel: 마태복음 28,16-20
 gospel_link_de: Matthäus28
