--- a/future-dates/2023-10-29-homily.md
+++ b/future-dates/2023-10-29-homily.md
@@ -9,7 +9,8 @@ first_reading_link_de: 2.Mose22
 first_reading_link_cbck:  Ex/22
 first_reading_link: m=1&n=102&p=22
 second_reading: 테살로니카 1서 1,5ㄴ-10
-second_reading_link_cbck: 1Thes/1
+second_reading_link_de: 1.Thessalonicher1
+second_reading_link_cbck:  1Thes/1
 second_reading_link: m=2&n=159&p=1
 gospel: 마태복음 22,34-40
 gospel_link_de: Matthäus22
