--- a/future-dates/2023-11-19-homily.md
+++ b/future-dates/2023-11-19-homily.md
@@ -9,7 +9,8 @@ first_reading_link_de: Sprüche31
 first_reading_link_cbck:  Prv/31
 first_reading_link: m=1&n=124&p=31
 second_reading: 테살로니카 1서 5,1-6
-second_reading_link_cbck: 1Thes/5
+second_reading_link_de: 1.Thessalonicher5
+second_reading_link_cbck:  1Thes/5
 second_reading_link: m=2&n=159&p=5
 gospel: 마태복음 25,14-30
 gospel_link_de: Matthäus25
