--- a/future-dates/2023-11-5-homily.md
+++ b/future-dates/2023-11-5-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Maleachi1
 first_reading_link_cbck:  Mal/1
 first_reading_link: m=1&n=146&p=1
 second_reading: 테살로니카 1서 2,7ㄴ-9.13 
-second_reading_link_cbck: 1Thes/2
+second_reading_link_de: 1.Thessalonicher2
+second_reading_link_cbck:  1Thes/2
 second_reading_link: m=2&n=159&p=2
 gospel: 마태복음 23,1-12
 gospel_link_de: Matthäus23
