--- a/future-dates/2023-12-25-homily.md
+++ b/future-dates/2023-12-25-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Jesaja9
 first_reading_link_cbck:  Ls/9
 first_reading_link: m=1&n=129&p=9
 second_reading: 티토서 2,11-14
-second_reading_link_cbck: Ti/2
+second_reading_link_de: Titus2
+second_reading_link_cbck:  Ti/2
 second_reading_link: m=2&n=163&p=2
 gospel: 루카 2,1-14
 gospel_link_de: Lukas2
