--- a/future-dates/2023-6-18-homily.md
+++ b/future-dates/2023-6-18-homily.md
@@ -9,7 +9,8 @@ first_reading_link_de: 2.Mose19
 first_reading_link_cbck:  Ex/19
 first_reading_link: m=1&n=102&p=19
 second_reading: 로마서 5,6-11
-second_reading_link_cbck: Rom/5
+second_reading_link_de: Römer5
+second_reading_link_cbck:  Rom/5
 second_reading_link: m=2&n=152&p=5
 gospel: 마태복음 9,36-10,8
 gospel_link_de: Matthäus9
