--- a/future-dates/2023-6-25-homily.md
+++ b/future-dates/2023-6-25-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: 5.Mose30
 first_reading_link_cbck:  Dt/30
 first_reading_link: m=1&n=105&p=30
 second_reading: 에페소서 4,29―5,2 
-second_reading_link_cbck: Eph/4
+second_reading_link_de: Epheser4
+second_reading_link_cbck:  Eph/4
 second_reading_link: m=2&n=156&p=4
 gospel: 마태 18,19ㄴ-22
 gospel_link_de: Matthäus18
