--- a/future-dates/2023-8-27-homily.md
+++ b/future-dates/2023-8-27-homily.md
@@ -9,7 +9,8 @@ first_reading_link_de: Jesaja22
 first_reading_link_cbck:  Ls/22
 first_reading_link: m=1&n=129&p=22
 second_reading: 로마서 11,33-36
-second_reading_link_cbck: Rom/11
+second_reading_link_de: Römer11
+second_reading_link_cbck:  Rom/11
 second_reading_link: m=2&n=152&p=11
 gospel: 마태복음 16,13-20
 gospel_link_de: Matthäus16
