--- a/future-dates/2023-9-10-homily.md
+++ b/future-dates/2023-9-10-homily.md
@@ -8,7 +8,8 @@ first_reading_link_de: Hesekiel33
 first_reading_link_cbck:  Ez/33
 first_reading_link: m=1&n=133&p=33
 second_reading: 로마서 13,8-10
-second_reading_link_cbck: Rom/13
+second_reading_link_de: Römer13
+second_reading_link_cbck:  Rom/13
 second_reading_link: m=2&n=152&p=13
 gospel: 마태복음 18,15-20
 gospel_link_de: Matthäus18
