--- a/_posts/2021/2021-2-21-trainer.md
+++ b/_posts/2021/2021-2-21-trainer.md
@@ -5,6 +5,7 @@ title: 사순 제1주일
 image: tiger.jpg
 
 first_reading: 창세기 9,8-15
+first_reading_link_de: 1.Mose9
 first_reading_link_cbck: Gn/9
 first_reading_link: m=1&n=101&p=9
 second_reading: 베드로 1서 3,18-22 
