--- a/_posts/2022/2022-5-8-mary.md
+++ b/_posts/2022/2022-5-8-mary.md
@@ -6,6 +6,7 @@ first_reading_link_de: Apostelgeschichte13
 first_reading_link_cbck:  Acts/13
 first_reading_link: m=2&n=151&p=13
 second_reading: 요한 묵시록 7,9.14ㄴ-17
+second_reading_link_de: Offenbarung7
 second_reading_link_cbck: Rv/7
 second_reading_link: m=2&n=173&p=7
 gospel: 요한 10.27-30
