--- a/_posts/2023/2023-2-26-homily.md
+++ b/_posts/2023/2023-2-26-homily.md
@@ -5,6 +5,7 @@ layout: post
 image: ausmalbild.jpg
 
 first_reading: 창세기 2,7-9; 3,1-7
+first_reading_link_de: 1.Mose2
 first_reading_link_cbck: Gn/2
 first_reading_link: m=1&n=101&p=2
 second_reading: 로마서 5,12-19
