--- a/_posts/2023/2023-3-19-blind.md
+++ b/_posts/2023/2023-3-19-blind.md
@@ -6,6 +6,7 @@ bonstetten: true
 image: blind.jpg
 
 first_reading: 사무엘기 상권 16,1ㄱㄹㅁㅂ.6-7.10-13ㄴ
+first_reading_link_de: 1.Samuel16
 first_reading_link_cbck: 1Sm/16
 first_reading_link: m=1&n=109&p=16
 second_reading: 에페소서 5,8-14 
