--- a/_posts/2021/2021-11-18-homily.md
+++ b/_posts/2021/2021-11-18-homily.md
@@ -5,6 +5,7 @@ title: 연중 제33주간 목요일
 image: 640px-Bonstetten-Wettswil_railway_station.jpg
 bonstetten: true
 first_reading: 마카베오기 상권 2,15-29
+first_reading_link_de: 1.Makkabäer2
 first_reading_link_cbck: 1Mc/2
 first_reading_link: m=1&n=120&p=2 
 gospel: 루카 19,41-44
