--- a/_posts/2022/2022-07-17-martha.md
+++ b/_posts/2022/2022-07-17-martha.md
@@ -4,6 +4,7 @@ title: "연중 제 16주일 (농민 주일)"
 church: "취리히 한인천주교회"
 father: "이영덕 안토니오 신부님"
 first_reading: "창세기 18,1-10ㄴ"
+first_reading_link_de: 1.Mose18
 first_reading_link_cbck: Gn/18
 first_reading_link: m=1&n=101&p=18
 second_reading: "콜로새서 1,24-28"
