--- a/_posts/2022/2022-5-22-oma.md
+++ b/_posts/2022/2022-5-22-oma.md
@@ -9,6 +9,7 @@ first_reading_link_de: Apostelgeschichte15
 first_reading_link_cbck:  Acts/15
 first_reading_link: m=2&n=151&p=1
 second_reading: 요한 묵시록 21,10-14,22-23
+second_reading_link_de: Offenbarung21
 second_reading_link_cbck: Rv/21
 second_reading_link: m=2&n=173&p=21
 gospel: 요한복음서 14,23-29
