--- a/_posts/2021/2021-4-18-mug.md
+++ b/_posts/2021/2021-4-18-mug.md
@@ -6,16 +6,16 @@ image: mug.jpg
 
 first_reading: 사도행전 3,13-15.17-19
  
-first_reading_link_cbck: Acts/3
-first_reading_link: m=2&n=151&p=3
+first_reading_link: Acts/3
+ 
 second_reading: 요한 1서 2,1-5ㄱ
  
-second_reading_link_cbck: 1Jn/2
-second_reading_link: m=2&n=169&p=2
+second_reading_link: 1Jn/2
+ 
 gospel: 루카 24,35-48
  
-gospel_link_cbck: Lk/24
-gospel_link: m=2&n=149&p=24
+gospel_link: Lk/24
+ 
 
 ---
 
