--- a/_posts/2021/2021-5-9-cpr.md
+++ b/_posts/2021/2021-5-9-cpr.md
@@ -6,16 +6,16 @@ image: cpr.jpeg
 
 first_reading: 사도행전 10,25-26.34-35.44-48
  
-first_reading_link_cbck: Acts/10
-first_reading_link: m=2&n=151&p=10
+first_reading_link: Acts/10
+ 
 second_reading: 요한 1서 4,7-10
  
-second_reading_link_cbck: 1Jn/4
-second_reading_link: m=2&n=169&p=4
+second_reading_link: 1Jn/4
+ 
 gospel: 요한 15,9-17
  
-gospel_link_cbck: Jn/15
-gospel_link: m=2&n=150&p=15
+gospel_link: Jn/15
+ 
 
 
 --- 
