--- a/_posts/2022/2022-04-17-mom.md
+++ b/_posts/2022/2022-04-17-mom.md
@@ -3,16 +3,16 @@ layout: post
 title: 부활주일
 first_reading: 이사야서 11,1-10
  
-first_reading_link_cbck: Ls/11
-first_reading_link: m=1&n=129&p=11
+first_reading_link: Ls/11
+ 
 second_reading: 로마서 15,4-9
  
-second_reading_link_cbck: Rom/15
-second_reading_link: m=2&n=152&p=15
+second_reading_link: Rom/15
+ 
 gospel: 마태오 3,1-12
  
-gospel_link_cbck: Mt/3
-gospel_link: m=2&n=147&p=3
+gospel_link: Mt/3
+ 
 image: 엄마찾아삼만리.png
 
 closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다. 우리가 모시는 성체를 통해
