--- a/_posts/2022/2022-10-9-insider.md
+++ b/_posts/2022/2022-10-9-insider.md
@@ -3,16 +3,16 @@ layout: post
 title: 연중 제28주일
 first_reading: 열왕기 하권 5,14-17
  
-first_reading_link_cbck: 2Kgs/5
-first_reading_link: m=2&n=112&p=5
+first_reading_link: 2Kgs/5
+ 
 second_reading: 티모테오 1서 1,12-17
  
-second_reading_link_cbck: 1Tm/1 
-second_reading_link: m=2&n=161&p=1
+second_reading_link: 1Tm/1 
+ 
 gospel: 루카 17,11-19
  
-gospel_link_cbck: Lk/17
-gospel_link: m=2&n=149&p=17
+gospel_link: Lk/17
+ 
 image: naaman.jpeg
 
 ---
