--- a/_posts/2022/2022-4-10-listen.md
+++ b/_posts/2022/2022-4-10-listen.md
@@ -6,16 +6,16 @@ image: listen.jpg
 
 first_reading: 이사야서 50,4-7
  
-first_reading_link_cbck: Ls/50
-first_reading_link: m=1&n=129&p=50
+first_reading_link: Ls/50
+ 
 second_reading: 필리피서 2,6-11
  
-second_reading_link_cbck: Phil/2
-second_reading_link: m=2&n=157&p=2
+second_reading_link: Phil/2
+ 
 gospel: 루카가 전한 우리 주 예수 그리스도의 수난기입니다. 22,14―23,56
  
-gospel_link_cbck: Lk/22
-gospel_link: m=2&n=149&p=22
+gospel_link: Lk/22
+ 
 
 ---
  
