--- a/_posts/2022/2022-5-8-mary.md
+++ b/_posts/2022/2022-5-8-mary.md
@@ -3,16 +3,16 @@ layout: post
 title: 부활 제 4주일 성소주일&어머니의 날&유나세례&김해세 루카 형제 연미사 
 first_reading: 사도행전 13,14.43-52
  
-first_reading_link_cbck: Acts/13
-first_reading_link: m=2&n=151&p=13
+first_reading_link: Acts/13
+ 
 second_reading: 요한 묵시록 7,9.14ㄴ-17
  
-second_reading_link_cbck: Rv/7
-second_reading_link: m=2&n=173&p=7
+second_reading_link: Rv/7
+ 
 gospel: 요한 10.27-30
  
-gospel_link_cbck: Jn/10
-gospel_link: m=2&n=150&p=10
+gospel_link: Jn/10
+ 
 image: mary-seoul.jpeg
 
 closing: "그 먼 곳에서부터 오신 분은 예수 그리스도 이십니다. 우리가 모시는 성체를 통해
