--- a/_posts/2022/2022-6-12-bahn.md
+++ b/_posts/2022/2022-6-12-bahn.md
@@ -6,16 +6,16 @@ image: road.jpeg
 
 first_reading: 잠언 8,22-31
  
-first_reading_link_cbck: Prv/8
-first_reading_link: m=1&n=124&p=8
+first_reading_link: Prv/8
+ 
 second_reading: 로마서 5,1-5
  
-second_reading_link_cbck: Rom/5
-second_reading_link: m=2&n=152&p=5
+second_reading_link: Rom/5
+ 
 gospel: 요한 16,12-15
  
-gospel_link_cbck: Jn/16
-gospel_link: m=2&n=150&p=16
+gospel_link: Jn/16
+ 
 ---
 
 평화를 빕니다.
