--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -3,16 +3,16 @@ layout: post
 title: ""
 first_reading: 열왕기 상 19,16 ᄂ.19-21
  
-first_reading_link_cbck: 1Kgs/19
-first_reading_link: m=1&n=111&p=19
+first_reading_link: 1Kgs/19
+ 
 second_reading: 갈라티아서 5,1.13-18
  
-second_reading_link_cbck: Gal/5
-second_reading_link: m=2&n=155&p=5
+second_reading_link: Gal/5
+ 
 gospel: 루카복음 9,51-62
  
-gospel_link_cbck: Lk/9
-gospel_link: m=2&n=149&p=9
+gospel_link: Lk/9
+ 
 image: 오병이어.jpg
 
 ---
