--- a/future-dates/2023-10-15-homily.md
+++ b/future-dates/2023-10-15-homily.md
@@ -7,17 +7,17 @@ bonstetten: true
 first_reading: 이사야서 25,6-10ㄱ
 
  
-first_reading_link_cbck: Ls/25
-first_reading_link: m=1&n=129&p=25
+first_reading_link: Ls/25
+ 
 second_reading: 필리피서 4,12-14.19-20
  
-second_reading_link_cbck: Phil/4
-second_reading_link: m=2&n=157&p=4
+second_reading_link: Phil/4
+ 
 gospel: 마태복음 22,1-14
 
  
-gospel_link_cbck: Mt/22
-gospel_link: m=2&n=147&p=22
+gospel_link: Mt/22
+ 
 
 ---
 
