--- a/future-dates/2023-8-27-homily.md
+++ b/future-dates/2023-8-27-homily.md
@@ -6,16 +6,16 @@ image:
 bonstetten: true
 first_reading: 이사야서 22,19-2312,13.16-19
  
-first_reading_link_cbck: Ls/22
-first_reading_link: m=1&n=129&p=22
+first_reading_link: Ls/22
+ 
 second_reading: 로마서 11,33-36
  
-second_reading_link_cbck: Rom/11
-second_reading_link: m=2&n=152&p=11
+second_reading_link: Rom/11
+ 
 gospel: 마태복음 16,13-20
  
-gospel_link_cbck: Mt/16
-gospel_link: m=2&n=147&p=16
+gospel_link: Mt/16
+ 
 
 ---
 
