--- a/_posts/2020/2020-12-13-wait.md
+++ b/_posts/2020/2020-12-13-wait.md
@@ -6,16 +6,16 @@ title: 대림 제3주일 (자선 주일)
 
 first_reading: 이사야서 61,1-2ㄱ.10-11
  
-first_reading_link_cbck: Ls/61
-first_reading_link: m=1&n=129&p=61
+first_reading_link: Ls/61
+ 
 second_reading: 테살로니카 1서 5,16-24
  
-second_reading_link_cbck: 1Thes/5
-second_reading_link: m=2&n=159&p=5
+second_reading_link: 1Thes/5
+ 
 gospel: 요한 1,6-8.19-28
  
-gospel_link_cbck: Jn/1
-gospel_link: m=2&n=150&p=1
+gospel_link: Jn/1
+ 
 
 image: 800px-Ruins_of_the_North_Palace_of_Nebuchadnezzar_II_at_Babylon,_Saddam's_palace_appear_on_the_background.jpg
 tags: 대림
