--- a/_posts/2020/2020-12-6-buttons.md
+++ b/_posts/2020/2020-12-6-buttons.md
@@ -5,16 +5,16 @@ title: 대림 제2주일 (인권 주일, 사회 교리 주간)
 image: paris.jpeg
 first_reading: 이사야서 40,1-5.9-11
  
-first_reading_link_cbck: Ls/40
-first_reading_link: m=1&n=129&p=40
+first_reading_link: Ls/40
+ 
 second_reading: 베드로 2서 3,8-14
  
-second_reading_link_cbck: 2Pt/3
-second_reading_link: m=2&n=168&p=3
+second_reading_link: 2Pt/3
+ 
 gospel: 마르코가 전한 거룩한 복음의 시작입니다. 1,1-8
  
-gospel_link_cbck: Mk/1
-gospel_link: m=2&n=148&p=1
+gospel_link: Mk/1
+ 
 tags: 대림
 
 ---
