--- a/_posts/2020/2020-2-23-homily.md
+++ b/_posts/2020/2020-2-23-homily.md
@@ -4,16 +4,16 @@ layout: post
 title: 연중 제7주일
 image: pest.jpg
 first_reading: 레위기 19,1-2.17-18 
-first_reading_link_cbck: Lv/9
-first_reading_link: m=1&n=103&p=19
+first_reading_link: Lv/9
+ 
 second_reading: 코린토 1서 3,16-23
  
-second_reading_link_cbck: 1Cor/3
-second_reading_link: m=2&n=153&p=3
+second_reading_link: 1Cor/3
+ 
 gospel: 마태 5,38-48
  
-gospel_link_cbck: Mt/5
-gospel_link: m=2&n=147&p=5
+gospel_link: Mt/5
+ 
 
 ---
 
