--- a/_posts/2020/2020-4-12-bird.md
+++ b/_posts/2020/2020-4-12-bird.md
@@ -6,16 +6,16 @@ image: chick.jpg
 
 first_reading: 사도행전 10,34ㄱ.37ㄴ-43
  
-first_reading_link_cbck: Acts/10
-first_reading_link: m=2&n=151&p=10
+first_reading_link: Acts/10
+ 
 second_reading: 콜로새서 3,1-4
  
-second_reading_link_cbck: Col/3
-second_reading_link: m=2&n=158&p=3
+second_reading_link: Col/3
+ 
 gospel: 요한 20,1-9
  
-gospel_link_cbck: Jn/20
-gospel_link: m=2&n=150&p=20
+gospel_link: Jn/20
+ 
 
 ---
 
