--- a/_posts/2021/2021-11-18-homily.md
+++ b/_posts/2021/2021-11-18-homily.md
@@ -6,12 +6,12 @@ image: 640px-Bonstetten-Wettswil_railway_station.jpg
 bonstetten: true
 first_reading: 마카베오기 상권 2,15-29
  
-first_reading_link_cbck: 1Mc/2
-first_reading_link: m=1&n=120&p=2 
+first_reading_link: 1Mc/2
+ 
 gospel: 루카 19,41-44
  
-gospel_link_cbck: Lk/19
-gospel_link: m=2&n=149&p=19
+gospel_link: Lk/19
+ 
 
 ---
  
