--- a/_posts/2021/2021-3-28-518.md
+++ b/_posts/2021/2021-3-28-518.md
@@ -5,16 +5,16 @@ title: 성지주일
 image: 이경남.jpeg
 first_reading: 이사야서 50,4-7
  
-first_reading_link_cbck: Ls/50
-first_reading_link: m=1&n=129&p=50
+first_reading_link: Ls/50
+ 
 second_reading: 필리피서 2,6-11
  
-second_reading_link_cbck: Phil/2
-second_reading_link: m=2&n=157&p=2
+second_reading_link: Phil/2
+ 
 gospel: 마르코가 전한 우리 주 예수 그리스도의 수난기입니다. 14,1―15,47
  
-gospel_link_cbck: Mk/14
-gospel_link: m=2&n=148&p=14
+gospel_link: Mk/14
+ 
 
 ---
 
