--- a/_posts/2022/2022-07-17-martha.md
+++ b/_posts/2022/2022-07-17-martha.md
@@ -5,16 +5,16 @@ church: "취리히 한인천주교회"
 father: "이영덕 안토니오 신부님"
 first_reading: "창세기 18,1-10ㄴ"
  
-first_reading_link_cbck: Gn/18
-first_reading_link: m=1&n=101&p=18
+first_reading_link: Gn/18
+ 
 second_reading: "콜로새서 1,24-28"
  
-second_reading_link_cbck: Col/1
-second_reading_link: m=2&n=158&p=1
+second_reading_link: Col/1
+ 
 gospel: "루카복음 10,38-42"
  
-gospel_link_cbck: Lk/10
-gospel_link: m=2&n=149&p=10
+gospel_link: Lk/10
+ 
 image: "mary-martha.jpg"
 opening: "많은 사람들이 휴가를 갔을 때에도 누군가는 일을 해야 합니다. 우리가 쉬고 있을 때에도 누군가는 일을 하고 있습니다. 하느님이 항상 일을 하고 계시고 하느님이 일을 하지 않으시면 우리는 영원히 쉬게 됩니다."
 closing: "저 담벼락 너머에 기도하시는 분들, 수녀님들 덕분에 세상이 돌아갑니다. 돈으로 세상이 돌아가는 것이 아닙니다. 기도할 때 우리가 세상의 중심이 됩니다. 기도하세요."
