--- a/_posts/2022/2022-2-3-homily.md
+++ b/_posts/2022/2022-2-3-homily.md
@@ -6,12 +6,12 @@ image: messintention.jpeg
 bonstetten: true
 first_reading: 열왕기 상권 2,1-4.10-12
  
-first_reading_link_cbck: 1Kgs/2
-first_reading_link: m=1&n=111&p=2
+first_reading_link: 1Kgs/2
+ 
 gospel: 마르코 6,7-13
  
-gospel_link_cbck: Mk/6
-gospel_link: m=2&n=148&p=6
+gospel_link: Mk/6
+ 
 
 ---
  
