--- a/_posts/2022/2022-5-22-oma.md
+++ b/_posts/2022/2022-5-22-oma.md
@@ -6,16 +6,16 @@ image: anointing.jpg
 
 first_reading: 사도행전 15, 1-2.22-29
  
-first_reading_link_cbck: Acts/15
-first_reading_link: m=2&n=151&p=1
+first_reading_link: Acts/15
+ 
 second_reading: 요한 묵시록 21,10-14,22-23
  
-second_reading_link_cbck: Rv/21
-second_reading_link: m=2&n=173&p=21
+second_reading_link: Rv/21
+ 
 gospel: 요한복음서 14,23-29
  
-gospel_link_cbck: Jn/14
-gospel_link: m=2&n=150&p=14
+gospel_link: Jn/14
+ 
 
 ---
 
