--- a/_posts/2023/2023-3-26-lazarus.md
+++ b/_posts/2023/2023-3-26-lazarus.md
@@ -5,16 +5,16 @@ layout: post
 image: lazarus.jpg
 first_reading: 에제키엘 예언서 37,12ㄹ - 14
  
-first_reading_link_cbck: Ez/37
-first_reading_link: m=1&n=133&p=37
+first_reading_link: Ez/37
+ 
 second_reading: 로마서 8,8 - 11
  
-second_reading_link_cbck: Rom/8
-second_reading_link: m=2&n=152&p=8
+second_reading_link: Rom/8
+ 
 gospel: 요한 복음서 11,1 - 45
  
-gospel_link_cbck: Jn/11
-gospel_link: m=2&n=150&p=11
+gospel_link: Jn/11
+ 
 tags: 사순
 
 ---
