--- a/_posts/2023/2023-4-23-homily.md
+++ b/_posts/2023/2023-4-23-homily.md
@@ -5,16 +5,16 @@ layout: post
 image: 2023-04-23.jpeg
 first_reading: 사도행전 2,14.22ㄴ-33
  
-first_reading_link_cbck: Acts/2
-first_reading_link: m=2&n=151&p=2
+first_reading_link: Acts/2
+ 
 second_reading: 베드로 1서 1,17-21
  
-second_reading_link_cbck: 1Pt/1
-second_reading_link: m=2&n=167&p=1
+second_reading_link: 1Pt/1
+ 
 gospel: 요한 21, 1-14
  
-gospel_link_cbck: Jn/21
-gospel_link: m=2&n=150&p=21
+gospel_link: Jn/21
+ 
 
 ---
 
