--- a/future-dates/2023-10-22-homily.md
+++ b/future-dates/2023-10-22-homily.md
@@ -6,17 +6,17 @@ image:
 first_reading: 이사야서 2,1-5
 
  
-first_reading_link_cbck: Ls/2
-first_reading_link: m=1&n=129&p=2
+first_reading_link: Ls/2
+ 
 second_reading: 로마서 10,9-18
 
  
-second_reading_link_cbck: Rom/10
-second_reading_link: m=2&n=152&p=10
+second_reading_link: Rom/10
+ 
 gospel: 마태복음 28,16-20
  
-gospel_link_cbck: Mt/28
-gospel_link: m=2&n=147&p=28
+gospel_link: Mt/28
+ 
 
 ---
 
