--- a/future-dates/2023-10-8-homily.md
+++ b/future-dates/2023-10-8-homily.md
@@ -6,17 +6,17 @@ image:
 bonstetten: true
 first_reading: 이사야서 5,1-7
  
-first_reading_link_cbck: Ls/5
-first_reading_link: m=1&n=129&p=5
+first_reading_link: Ls/5
+ 
 second_reading: 필리피서 4,6-9
  
-second_reading_link_cbck: Phil/4
-second_reading_link: m=2&n=157&p=4
+second_reading_link: Phil/4
+ 
 gospel: 마태복음 21,33-43
 
  
-gospel_link_cbck: Mt/21
-gospel_link: m=2&n=147&p=21
+gospel_link: Mt/21
+ 
 
 ---
 
