--- a/future-dates/2023-11-12-homily.md
+++ b/future-dates/2023-11-12-homily.md
@@ -6,16 +6,16 @@ image:
 bonstetten: true
 first_reading: 지혜서 6,12-16
  
-first_reading_link_cbck: Wis/6
-first_reading_link: m=1&n=127&p=6
+first_reading_link: Wis/6
+ 
 second_reading: 테살로니카 1서 4,13-18
  
-second_reading_link_cbck: 1Thes/4
-second_reading_link: m=2&n=159&p=4
+second_reading_link: 1Thes/4
+ 
 gospel: 마태복음 25,1-13
  
-gospel_link_cbck: Mt/25
-gospel_link: m=2&n=147&p=25
+gospel_link: Mt/25
+ 
 
 ---
 
