--- a/future-dates/2023-11-26-homily.md
+++ b/future-dates/2023-11-26-homily.md
@@ -5,16 +5,16 @@ layout: post
 image: 
 first_reading: 에제키엘 예언서 34,11-12.15-17
  
-first_reading_link_cbck: Ez/34
-first_reading_link: m=1&n=133&p=34
+first_reading_link: Ez/34
+ 
 second_reading: 코린토 1서 15,20-26.28 
  
-second_reading_link_cbck: 1Cor/15
-second_reading_link: m=2&n=153&p=15
+second_reading_link: 1Cor/15
+ 
 gospel: 마태복음 25,31-46
  
-gospel_link_cbck: Mt/25
-gospel_link: m=2&n=147&p=25
+gospel_link: Mt/25
+ 
 
 ---
 
