--- a/future-dates/2023-11-5-homily.md
+++ b/future-dates/2023-11-5-homily.md
@@ -5,16 +5,16 @@ layout: post
 image: 
 first_reading: 말라키 예언서 1,14ㄴ-2,2ㄴ.8-10
  
-first_reading_link_cbck: Mal/1
-first_reading_link: m=1&n=146&p=1
+first_reading_link: Mal/1
+ 
 second_reading: 테살로니카 1서 2,7ㄴ-9.13 
  
-second_reading_link_cbck: 1Thes/2
-second_reading_link: m=2&n=159&p=2
+second_reading_link: 1Thes/2
+ 
 gospel: 마태복음 23,1-12
  
-gospel_link_cbck: Mt/23
-gospel_link: m=2&n=147&p=23
+gospel_link: Mt/23
+ 
 
 ---
 
