--- a/future-dates/2023-12-25-homily.md
+++ b/future-dates/2023-12-25-homily.md
@@ -5,16 +5,16 @@ layout: post
 image: 
 first_reading: 이사야서 9,1-6 
  
-first_reading_link_cbck: Ls/9
-first_reading_link: m=1&n=129&p=9
+first_reading_link: Ls/9
+ 
 second_reading: 티토서 2,11-14
  
-second_reading_link_cbck: Ti/2
-second_reading_link: m=2&n=163&p=2
+second_reading_link: Ti/2
+ 
 gospel: 루카 2,1-14
  
-gospel_link_cbck: Lk/2
-gospel_link: m=2&n=149&p=2
+gospel_link: Lk/2
+ 
 daily_missa: 20231225/15390
 
 ---
