--- a/future-dates/2023-6-25-homily.md
+++ b/future-dates/2023-6-25-homily.md
@@ -5,16 +5,16 @@ layout: post
 image: 
 first_reading: 신명기 30,1-5
  
-first_reading_link_cbck: Dt/30
-first_reading_link: m=1&n=105&p=30
+first_reading_link: Dt/30
+ 
 second_reading: 에페소서 4,29―5,2 
  
-second_reading_link_cbck: Eph/4
-second_reading_link: m=2&n=156&p=4
+second_reading_link: Eph/4
+ 
 gospel: 마태 18,19ㄴ-22
  
-gospel_link_cbck: Mt/18
-gospel_link: m=2&n=147&p=18
+gospel_link: Mt/18
+ 
 
 ---
 
