--- a/future-dates/2023-6-4-homily.md
+++ b/future-dates/2023-6-4-homily.md
@@ -6,16 +6,16 @@ image:
 bonstetten: true
 first_reading: 탈출기 34,4ㄱㄷ-6.8-9
  
-first_reading_link_cbck: Ex/34
-first_reading_link: m=1&n=102&p=34
+first_reading_link: Ex/34
+ 
 second_reading: 코린토 2서 13,11-13
  
-second_reading_link_cbck: 2Cor/13
-second_reading_link: m=2&n=154&p=13
+second_reading_link: 2Cor/13
+ 
 gospel: 요한 3,16-18
  
-gospel_link_cbck: Jn/3
-gospel_link: m=2&n=150&p=3 
+gospel_link: Jn/3
+ 
 
 ---
 
