--- a/future-dates/2023-9-24-homily.md
+++ b/future-dates/2023-9-24-homily.md
@@ -6,16 +6,16 @@ image:
 bonstetten: true
 first_reading: 이사야서 55,6-9
  
-first_reading_link_cbck: Ls/55
-first_reading_link: m=1&n=129&p=55
+first_reading_link: Ls/55
+ 
 second_reading: 필리피서 1,20ㄷ-24.27ㄱ
  
-second_reading_link_cbck: Phil/1
-second_reading_link: m=2&n=157&p=1
+second_reading_link: Phil/1
+ 
 gospel: 마태복음 20,1-16
  
-gospel_link_cbck: Mt/20
-gospel_link: m=2&n=147&p=20
+gospel_link: Mt/20
+ 
 
 ---
 
