--- a/future-dates/2023-9-3-homily.md
+++ b/future-dates/2023-9-3-homily.md
@@ -6,16 +6,16 @@ image:
 bonstetten: true
 first_reading: 예레미야서 20,7-9
  
-first_reading_link_cbck: Jer/20
-first_reading_link: m=1&n=130&p=20
+first_reading_link: Jer/20
+ 
 second_reading: 로마서 12,1-2
  
-second_reading_link_cbck: Rom/12
-second_reading_link: m=2&n=152&p=12
+second_reading_link: Rom/12
+ 
 gospel: 마태복음 16,21-27
  
-gospel_link_cbck: Mt/16
-gospel_link: m=2&n=147&p=16
+gospel_link: Mt/16
+ 
 
 ---
 
