--- a/future-dates/2024-1-1-homily.md
+++ b/future-dates/2024-1-1-homily.md
@@ -5,12 +5,8 @@ layout: post
 image: 
 first_reading: 
 first_reading_link: 
- 
-second_reading: 
-second_reading_link: 
- 
-gospel: 
-gospel_link: 
+second_reading:second_reading_link: 
+gospel:gospel_link: 
  
 
 ---
