--- a/_posts/2021/2021-12-9-homily.md
+++ b/_posts/2021/2021-12-9-homily.md
@@ -12,7 +12,7 @@ gospel_link: Mt/11
 
 ---
  
-이 세상의 사람들이 세속적인 힘(권력)을 가지고 있습니다. 그리고 세속적인 힘이 하느님을 공격합니다. (provozieren)
+이 세상의 사람들이 세속적인 힘(권력)을 가지고 있습니다. 그리고 세속적인 힘이 하느님을 공격합니다.
 
 법률, 군사력, 결정, 규칙, 형벌 등이 세속의 폭력을 나타냅니다. 세속적인 폭력이 행사되고 있습니다. 유럽연합의 권력이 성탄절, 성 요셉, 마리아 등을 없애 버리려고 합니다. 이것은 하느님의 권능에 대한 세속적인 폭력입니다. 오늘 복음에 나오는대로 세례자 요한 때부터 지금까지 하늘나라는 공격받고 있습니다.
 
