--- a/_posts/2022/2022-6-26-apero.md
+++ b/_posts/2022/2022-6-26-apero.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ""
+title: "연중 제13주일"
 first_reading: 열왕기 상 19,16 ᄂ.19-21
 first_reading_link: 1Kgs/19
 second_reading: 갈라티아서 5,1.13-18
