--- a/_posts/2022/2022-09-25-klaus.md
+++ b/_posts/2022/2022-09-25-klaus.md
@@ -1,13 +1,12 @@
 ---
 layout: post
-title: ""
+title: "연중 제26주일 (브루더 클라우스 대축일)"
 first_reading: 로마 14, 17-19
 first_reading_link: Rom/14
 second_reading: 티모테오 1서 6,11ㄱㄷ-16
 second_reading_link: 1Tm/6 
 gospel: 마태 19, 27-29
 gospel_link: Mt/19
- 
 image: Seats_inside_a_flight.jpg
 
 ---
