--- a/_posts/2023/2023-04-22-homily.md
+++ b/_posts/2023/2023-04-22-homily.md
@@ -1,6 +1,6 @@
 ---
 
-title: "11시 Wallfahrt Kapelle Jonental 부활 제3주일 특전미사"
+title: 부활 제3주일 특전미사
 layout: post 
 bonstetten: true
 second_reading: 베드로 1서 1,17-21
