--- a/future-dates/2023-05-18-homily.md
+++ b/future-dates/2023-05-18-homily.md
@@ -1,6 +1,6 @@
 ---
 
-title: 주님 승천 대축일 대축일 (스위스 전례력)
+title: 주님 승천 대축일 대축일
 layout: post 
 first_reading: 사도행전 8,5-8.14-17
 first_reading_link: Acts/8
@@ -8,10 +8,8 @@ second_reading: 베드로 1서 3,15-18
 second_reading_link: 1Pt/3
 gospel: 요한 14,15-21
 gospel_link: Jn/14
- 
 daily_missa: 20230521
- 
- 
+bonstetten: true
 
 ---
 
