--- a/_posts/2023/2023-05-18-homily.md
+++ b/_posts/2023/2023-05-18-homily.md
@@ -31,4 +31,4 @@ bonstetten: true
 
 어릴 때, 우연히 커다란 새 (매)를 보았습니다. 저는 저 새가 북한까지 날아가는 것을 상상했습니다. 우리는 예수님이라는 독수리와 함께 날아가 우리의 영원한 고향인 천국에 착륙합시다. 예수님과 함께 여행하고 날아갈 준비가 되셨습니까?
 
-참고자료: <a href="https://www.youtube.com/watch?v=CPEAifC4zsQ&list=WL&index=54&t=1s">독일 베네딕토회 신부님이 100년전 한국을 촬영해 남기신 영상입니다.</a>  
+참고자료: <a href="https://www.youtube.com/watch?v=CPEAifC4zsQ">독일 베네딕토회 신부님이 100년전 한국을 촬영해 남기신 영상입니다.</a>  
