유이배 신부님 영상 링크

--- a/_posts/2023/2023-05-28-homily.md
+++ b/_posts/2023/2023-05-28-homily.md
@@ -31,4 +31,6 @@ gospel_link: Jn/20
 
 오늘이 교회가 탄생한 날입니다. 교회의 생일이지요. 가톨릭 교회를 위해 기도해 주세요. 
 
- 
+<hr>
+
+<a href="https://www.youtube.com/watch?v=xRWmSq7JS3I">성심원에서 일하시는 스페인 신부님 영상</a>입니다 
