--- a/_posts/2023/2023-06-18-homily.md
+++ b/_posts/2023/2023-06-18-homily.md
@@ -30,7 +30,7 @@ gospel_link: Mt/9
 여러분들은 뛰어넘고 더 멀리 가야 합니다. 우리가 이런 현상을 그냥 보고만 있다면 마지막 심판날 모두 죄인으로 있을 것입니다.
 
 주기도문 하기 전 > 
-다음 주 일요일에 저는 피터폴 성당에서 한국어 미사를 거행합니다. 미사 전에 저는 구마를 할 것입니다. 취리히는 포기했지만, 한국 공동체에서 연대의식을 가지고, 악령을 쫓아낼 것입니다. 우리는 함께 기도해야 합니다. 취리히 칸톤의 교회와 쿠어 교구를 위해 기도합니다. 
+다음 주 일요일에 저는 피터폴 성당에서 한국어 미사를 거행합니다. 미사 전에 저는 구마를 할 것입니다. 취리히는 포기했지만, 한국 공동체에서 연대의식을 가지고, 악령을 쫓아낼 것입니다. 우리는 함께 기도해야 합니다. <a href="https://www.zhkath.ch/">취리히 칸톤의 교회</a>와 <a href="https://www.bistum-chur.ch/">쿠어 교구</a>를 위해 기도합니다. 
 
 인사 >
 어머니 교회 (Mutterkirche)의 위대한 사명을 위해 기도해 주세요.
